--- a/Linux/linux_5_常见问题/2024-05-22-5_1.md
+++ b/Linux/linux_5_常见问题/2024-05-22-5_1.md
@@ -9,6 +9,35 @@ tag: LinuxProblem
 
 + linux系统下常见的问题及其解决方法
 
+## mv 目录非空
+
+当你尝试使用 `mv` 命令移动一个非空目录时，你会发现 `mv` 只能在同一文件系统中移动目录，而不能跨文件系统移动非空目录。如果你确实需要移动一个非空目录，可以尝试以下方法：
+
+1. **使用 `rsync` 命令**：
+   `rsync` 是一个功能强大的工具，可以用于将文件和目录从一个位置同步到另一个位置。
+   ```bash
+   rsync -avz /path/to/source/directory /path/to/destination
+   ```
+
+2. **使用 `cp` 命令复制然后删除原目录**：
+   如果 `rsync` 不可用，你可以先使用 `cp` 命令递归复制目录，然后删除原目录。
+   ```bash
+   cp -r /path/to/source/directory /path/to/destination
+   rm -rf /path/to/source/directory
+   ```
+
+3. **使用 `tar` 命令打包和解包**：
+   你可以使用 `tar` 命令先将目录打包，然后将包解压到目标位置。
+   ```bash
+   tar -czf directory.tar.gz -C /path/to/source directory
+   mv directory.tar.gz /path/to/destination
+   cd /path/to/destination
+   tar -xzf directory.tar.gz
+   rm directory.tar.gz
+   ```
+
+你可以选择最适合你情况的方法来移动非空目录。
+
 ## ubuntu 文件加个锁是什么意思
 
 在 Ubuntu 中,给文件加锁通常有以下几种含义:
