--- a/Personal/2022-06-09-work_工作周记.md
+++ b/Personal/2022-06-09-work_工作周记.md
@@ -2652,9 +2652,17 @@ last_modified_date: 2024-06-13 12:00:00 +0800
 
 + 07.12
   + 拷贝工地项目代码
-  + 搭建编译环境，
+  + 搭建编译环境 [done]
     + 实现vca编译
     + 实现mnc编译
   + rk
     + 裸土覆盖算法对接
     + 新平台推送协议开发
+
++ 07.13
+  + 搭建流媒体服务器
+    + 暂且搁置，先对接接口
+  + rk
+    + 裸土覆盖算法对接
+    + 新平台推送协议开发 [doing]
+      + 发送HTTP请求是，查询参数和body数据同时发送 [undo]
