--- a/Project/rk_工地盒子/rk_doc/2024-05-22-1-18_版本发行.md
+++ b/Project/rk_工地盒子/rk_doc/2024-05-22-1-18_版本发行.md
@@ -131,12 +131,12 @@ curl --location --request POST 'http://127.0.0.1:8000/api/setting/task/add' \
 --header 'Host: 192.169.5.61:8000' \
 --header 'Connection: keep-alive' \
 --data-raw '{
-    "name":"反光衣检测-test",
+    "name":"安全帽",
     "start":1,
-    "source":24,
+    "source":17,
     "schedulerType":"Daemon",
     "models":{
-        "id":4,
+        "id":3,
         "duration":" ",
         "start":" ",
         "end":" "
@@ -147,7 +147,7 @@ curl --location --request POST 'http://127.0.0.1:8000/api/setting/task/add' \
 curl -X POST --data "{\"id\":\"rA5ox\"}" http://127.0.0.1:8000/api/setting/task/stop
 
 # 删除任务
-curl -X POST --data "{\"ids\":[\"N4hJh\"]}" http://127.0.0.1:8000/api/setting/task/delete
+curl -X POST --data "{\"ids\":[\"dLgKi\"]}" http://127.0.0.1:8000/api/setting/task/delete
 
 # 启动任务
 curl -X POST --data "{\"id\":\"rA5ox\"}" http://127.0.0.1:8000/api/setting/task/start
@@ -167,7 +167,7 @@ curl --location --request POST 'http://127.0.0.1:8000/api/setting/camera/delete'
 --header 'Connection: keep-alive' \
 --data-raw '{
     "ids": [
-        6
+        16
     ]
 }'
 
@@ -179,8 +179,8 @@ curl --location --request POST 'http://127.0.0.1:8000/api/setting/camera/add' \
 --header 'Host: 192.169.5.61:8000' \
 --header 'Connection: keep-alive' \
 --data-raw '{
-    "name": "闸机安全帽识别",
-    "url":"rtsp://admin:qwer2024@192.168.110.64:554/h264/ch1/main/av_stream"
+    "name": "中维世纪施工现场187",
+    "url":"rtsp://admin:jk123456@192.168.6.187"
 }'
 
 # 相机测试
