--- a/Video/2024-05-22-video_1_理论基础.md
+++ b/Video/2024-05-22-video_1_理论基础.md
@@ -1,9 +1,9 @@
 ---
-category: VideoDecode
+category: Video
 date: 2024-05-22 09:00:00 +0800
 layout: post
 title: video_1_理论基础
-tag: VideoDecode
+tag: Video
 ---
 ## 简介
 
