--- a/Project/rk_工地盒子/rk_doc/2024-05-31_平台对接.md
+++ b/Project/rk_工地盒子/rk_doc/2024-05-31_平台对接.md
@@ -5,4 +5,15 @@
 ## 坤鲁
 
 + 地址: https://d6cnext.haolink.cn
-+ 
+
+## 南京熠耀
+
++ https://site.ycfszn.com/phal/?s=App.AI.Setwarn
+
+## 南京傲途
+
++ https://wisdom.aotusoft.net/wisdom/aibox/upload
+
+## 常州建安平台
+
++ https://wisdomsite.ticdata.cn/zhgd-cus/openApi/token&https://wisdomsite.ticdata.cn/smart-mon/openApi/addAiData
