--- a/Personal/2022-06-09-work_工作周记.md
+++ b/Personal/2022-06-09-work_工作周记.md
@@ -2666,3 +2666,19 @@ last_modified_date: 2024-06-13 12:00:00 +0800
     + 裸土覆盖算法对接
     + 新平台推送协议开发 [doing]
       + 发送HTTP请求是，查询参数和body数据同时发送 [undo]
+
++ 07.14
+  + rk
+    + 裸土覆盖算法对接 
+    + 新平台推送协议开发 [doing]
+      + 发送HTTP请求是，查询参数和body数据同时发送 [done]
+
++ 07.15
+  + rk
+    + 裸土覆盖算法对接 
+      + 算法配置 [done]
+      + vca模型加载和结果输出
+      + mnc业务开发
+    + 新平台推送协议开发 [doing]
+      + 发送HTTP请求是，查询参数和body数据同时发送 [done]
+      + 16号联调
