--- a/Personal/2022-06-09-work_工作周记.md
+++ b/Personal/2022-06-09-work_工作周记.md
@@ -2677,8 +2677,15 @@ last_modified_date: 2024-06-13 12:00:00 +0800
   + rk
     + 裸土覆盖算法对接 
       + 算法配置 [done]
-      + vca模型加载和结果输出
-      + mnc业务开发
+      + vca模型加载和结果输出 [done]
+      + mnc业务开发 [done]
     + 新平台推送协议开发 [doing]
       + 发送HTTP请求是，查询参数和body数据同时发送 [done]
       + 16号联调
+
++ 07.16
+  + rk
+    + 新平台推送协议开发 [doing]
+      + 联调
+    + 裸土覆盖算法对接 
+      + 镜像制作
