--- a/Docker/2024-07-10-docker_4_常见问题.md
+++ b/Docker/2024-07-10-docker_4_常见问题.md
@@ -41,3 +41,10 @@ docker container ls -a
 ```bash
 cat /dev/null > /var/lib/docker/containers/容器ID/容器ID-json.log
 ```
+
+### 启动时设置日志文件大小
+
++ 参考 docker 官方的文档，重启docker启动时增加参数
+```bash
+docker run -it --log-opt max-size=10m --log-opt max-file=3 alpine ash
+```
