--- a/Personal/2022-06-09-work_工作周记.md
+++ b/Personal/2022-06-09-work_工作周记.md
@@ -2686,6 +2686,10 @@ last_modified_date: 2024-06-13 12:00:00 +0800
 + 07.16
   + rk
     + 新平台推送协议开发 [doing]
-      + 联调
+      + 联调 [done]
+      + 软件包制作 [done]
     + 裸土覆盖算法对接 
-      + 镜像制作
+      + 覆盖率
+        + mask掩码还原
+        + 覆盖率计算
+      + 区域
