--- a/Project/rk_工地盒子/rk_doc/2024-05-22-1-0_镜像发行.md
+++ b/Project/rk_工地盒子/rk_doc/2024-05-22-1-0_镜像发行.md
@@ -275,3 +275,23 @@ cat /userdata/rk_image.tar | docker import - rk1126:20240618
 ```bash 
 docker run -d --privileged=true --restart=always --network=host -v /userdata/:/userdata/ -v /tmp/:/tmp/ -v /dev/galcore:/dev/galcore -v /usr/:/rk_usr/ --device=/dev/galcore  rk1126:20240618 /bin/bash /data/static/bash/auto-run.sh
 ```
+
+## 20240716
+
++ v20版本镜像
+
++ mnc
+  + 增加南京熠耀平台
+
++ vca
+  + 增加裸土覆盖算法
+
++ 加载镜像命令
+```bash
+cat /userdata/rk_image.tar | docker import - rk1126:20240716
+```
+
++ 启动容器命令
+```bash 
+docker run -d --privileged=true --restart=always --network=host --log-opt max-size=10m --log-opt max-file=3  -v /userdata/:/userdata/ -v /tmp/:/tmp/ -v /dev/galcore:/dev/galcore -v /usr/:/rk_usr/ --device=/dev/galcore  rk1126:20240716 /bin/bash /data/static/bash/auto-run.sh
+```
