--- a/Books/2024-06-27-数据结构-算法与应用-C++.md
+++ b/Books/2024-06-27-数据结构-算法与应用-C++.md
@@ -214,3 +214,50 @@ digit = {0, 1, 2, 3, 4, 5, 6, 7, 8, 9};
 + 数组的应用需要我们把数组元素序列化，即按一维顺序排列。例如，数组元素只能一次输出或输入一个。因此，我们必须确定一个输入或输出的顺序。
 + 从第一行开始，依次对每一行的索引从左至右连续编号。它把二维数组的索引映射为 [0, n-1]中的数，这种映射方式称为行主映射(row major mapping)。索引对应的数称为行主次序
 + 另一种映射方式，称为列主映射(column major mapping)。在列主映射中，对索引的编号从最左列开始，依次对每一列的索引从上到下连续编号。
+
+### 矩阵
+
++ 一个m * n的矩阵(matrix)是一个m行，n列的表，m和n是矩阵的维数(dimension)
++ 矩阵通常用来组织数据。
++ 矩阵最常见的操作是矩阵转置，矩阵相加，矩阵相乘。
++ 两个矩阵仅当维数相同时(即它们的行数和列数都分别相等)才可以相加。两个m * n的矩阵A和B相加之后是一个m * n的矩阵C 
++ 一个m * n的矩阵A和一个q * p的矩阵B，只有当A的列数等于B的行数(即n=q)时，才可以相乘A*B。A*B的结果是一个m * p的矩阵C
+
++ 特殊矩阵
+  + 方阵(square matrix)是行数和列数相同的矩阵。一些常用的特殊方阵如下
+  + 对角矩阵(diagonal)
+  + 三对角矩阵(tridiagonal)
+  + 下三角矩阵(lower triangular)
+  + 上三角矩阵(upper triangular)
+  + 对陈矩阵(symmetric)
+
++ 一个m * n的矩阵，如果大多数元素都是0,则称为稀疏矩阵(spare matrix)。一个矩阵如果不是稀疏的，就成为稠密矩阵(dense matrix)
+
+## 第八章 栈
+
++ 栈和队列很可能是应用频率最高的数据结构。在第五章和第六章曾经广泛研究了线性表和有序表数据结构，而栈和队列是它们的限制版。
++ 栈和队列的应用广泛，以至于C++的标准类模板库STL都提供了用数组实现的栈和队列。
+
++ 把线性表的插入和删除操作限制在同一端进行，就得到栈数据结构。因此，栈是一个后进先出(last-in-first-out, FIFO)的数据结构。因为栈是一种特殊的线性表，所以从相应的线性表类派生出栈类是很自然的事情。
+
+### 定义和应用
+
++ 栈(stack)是一种特殊的线性表，其插入(也称入栈或压栈)和删除(也称出栈或弹栈)操作都在表的同一端进行。这一端称为栈顶(top),另一端称为栈底(bottom)
+
++ 计算机是如何执行递归函数？
+  + 使用递归工作栈(recursion stack)。当一个函数被调用时，一个返回地址(即被调函数一旦执行完，接下去要执行的程序指令的地址)和被调函数的局部变量和形参的值都要存储在递归工作栈中。当执行一次返回时，被调函数的局部变量和形参的值被恢复为调用之前的值(这些值存储在递归工作栈的顶部)，而且程序从返回地址处继续执行，这个返回地址也存储在递归工作栈的顶部。
+
++ 抽象数据类型
+```cpp
+template<class T>
+class stack
+{
+  public:
+    virtual ~stack();
+    virtual bool empty() const = 0; // 返回true，当且仅当栈为空
+    virtual int size() const = 0;  // 返回栈中元素个数
+    virtual T& top() = 0;  // 返回栈顶元素的引用
+    virtual void pop() = 0;  // 删除栈顶元素
+    virtual void push(const T& theElement) = 0;  // 将元素theElement压入栈顶
+};
+```
