--- a/Personal/2022-06-09-work_工作周记.md
+++ b/Personal/2022-06-09-work_工作周记.md
@@ -2693,3 +2693,10 @@ last_modified_date: 2024-06-13 12:00:00 +0800
         + mask掩码还原
         + 覆盖率计算
       + 区域
+
++ 07.17
+  + rk
+    + 裸土覆盖算法对接 
+      + 增加覆盖率 [done]
+      + 增加区域 [doing]
+        + 输出的掩码图，加上区域限制。遍历像素点是，首先检查该点的坐标是否在监测区域内
