--- a/Project/rk_工地盒子/rk_doc/2024-05-31_平台对接.md
+++ b/Project/rk_工地盒子/rk_doc/2024-05-31_平台对接.md
@@ -17,3 +17,5 @@
 ## 常州建安平台
 
 + https://wisdomsite.ticdata.cn/zhgd-cus/openApi/token&https://wisdomsite.ticdata.cn/smart-mon/openApi/addAiData
++ 账号: qian001
++ 密码: 12345678
