--- a/CMake/cmake_3_常用技巧/2024-05-22-cmake_3_02_常用技巧.md
+++ b/CMake/cmake_3_常用技巧/2024-05-22-cmake_3_02_常用技巧.md
@@ -9,6 +9,42 @@ tag: CMake
 
 + cmake 常用的技巧
 
+## cmake 设置编译线程数量
+
+在使用 CMake 构建项目时，你可以通过设置编译器选项来指定编译时使用的线程数量。具体步骤如下：
+
+1. **使用 `cmake` 命令配置项目：**
+   例如，你可以在项目根目录中运行以下命令来生成构建文件：
+   ```bash
+   cmake -S . -B build
+   ```
+
+2. **使用 `cmake --build` 命令进行构建并指定线程数量：**
+   使用 `--parallel` 选项可以指定编译时使用的线程数量。例如，如果你想使用 8 个线程来进行编译，可以运行以下命令：
+   ```bash
+   cmake --build build --parallel 8
+   ```
+
+这样，CMake 会根据你指定的线程数量来并行执行构建任务，从而加快编译速度。
+
+完整的流程示例如下：
+```bash
+cmake -S . -B build
+cmake --build build --parallel 8
+```
+
+此外，你还可以直接在 `make` 或 `ninja` 命令中指定线程数量（假设你使用的是这些生成器）：
+- 对于 `make` 生成器：
+  ```bash
+  make -j8
+  ```
+- 对于 `ninja` 生成器：
+  ```bash
+  ninja -j8
+  ```
+
+CMake 会根据你的项目配置选择合适的生成器并使用相应的构建工具。
+
 ## CMakeLists.txt 编译性能参数配置
 
 在 `CMakeLists.txt` 中配置编译性能参数，可以通过一些特定的编译选项和设置来优化编译时间和资源使用。以下是一些常见的方法和配置选项，可以用来提升编译性能：
