--- a/Personal/2024-07-23-2024年工作笔记.md.md
+++ b/Personal/2024-07-23-2024年工作笔记.md.md
@@ -1564,7 +1564,22 @@ last_modified_date: 2024-07-23 10:00:00 +0800
     + 阅读《C++20高级编程》
 
 + 07.22
-  + rk
+  + rk [done]
     + 新平台对接和裸土覆盖功能交付
   + C++ STL基础
     + 阅读《C++20高级编程》
+
++ 07.23
+  + C++ STL基础
+    + vector 视频教程
+
++ 07.24
+  + 心态
+    + 稳住心态，梳理下一份工作的期望
+  + C++ STL基础
+    + 容器部分复习完，通过视频总结
+  + 面试
+    + 7月25日 云冀智行 showmebug平台
+    + 7月26日 鑫剑科技 现场面试
+  + 日常生活
+    + 199 乐游票
