--- a/Personal/2024-07-23-2024年工作笔记.md.md
+++ b/Personal/2024-07-23-2024年工作笔记.md.md
@@ -1575,11 +1575,14 @@ last_modified_date: 2024-07-23 10:00:00 +0800
 
 + 07.24
   + 心态
-    + 稳住心态，梳理下一份工作的期望
-  + C++ STL基础
-    + 容器部分复习完，通过视频总结
+    + 稳住心态，梳理下一份工作的期望 [done]
+  + C++ STL基础 
+    + 容器部分复习完，通过视频总结 [done]
   + 面试
     + 7月25日 云冀智行 showmebug平台
     + 7月26日 鑫剑科技 现场面试
   + 日常生活
     + 199 乐游票
+      + 购买，激活后是否可以退票？
+  + 未来就业方向(已确定)
+    + CUDA, CUDNN, NVIDIA, TensorRT --> 高性能计算，异构编程，并行计算
