--- a/Personal/2024-07-23-2024年工作笔记.md.md
+++ b/Personal/2024-07-23-2024年工作笔记.md.md
@@ -1586,3 +1586,17 @@ last_modified_date: 2024-07-23 10:00:00 +0800
       + 购买，激活后是否可以退票？
   + 未来就业方向(已确定)
     + CUDA, CUDNN, NVIDIA, TensorRT --> 高性能计算，异构编程，并行计算
+
++ 07.25
+  + C++ STL基础 
+    + 关联式容器复习 [done]
+    + 通过视频总结
+  + 面试
+    + 7月25日 云冀智行 showmebug平台
+    + 7月26日 鑫剑科技 现场面试
+  + 日常生活
+    + 199 乐游票
+      + 购买，激活后是否可以退票？
+  + 未来就业方向(已确定)
+    + CUDA, CUDNN, NVIDIA, TensorRT --> 高性能计算，异构编程，并行计算
+      + 学习CUDA基础知识，形成笔记
