--- a/Personal/2024-07-23-2024年工作笔记.md.md
+++ b/Personal/2024-07-23-2024年工作笔记.md.md
@@ -1600,3 +1600,5 @@ last_modified_date: 2024-07-23 10:00:00 +0800
   + 未来就业方向(已确定)
     + CUDA, CUDNN, NVIDIA, TensorRT --> 高性能计算，异构编程，并行计算
       + 学习CUDA基础知识，形成笔记
+    + 在x86上，加载yolov5目标检测模型，进行推理加速。
+    + 在rk平台，加载模型，学好videoprocess
