--- a/Tools/2024-07-23-视频教程.md
+++ b/Tools/2024-07-23-视频教程.md
@@ -32,3 +32,37 @@ tag: Tools
   + 缺点 swap() array是线性时间复杂度，vector是常量时间复杂度，
   + 与C风格的数组比较，优点就是封装了一些常用的方法，例如size(), empty()
   + deque 
+
++ 下一步
+  + 关联式容器: map, set, pair,  multimap, multiset
+  + 无序式关联容器： unordered_map, unordered_set,
+  + 堆栈的一些概念，内存模型，类，虚函数表，this指针，成员函数的地址，怎么调用成员函数的。
+
+## map, set
+
++ 容器，分为序列容器和关联容器
+  + 序列容器: vector, array, list, deque
+  + 关联容器
+    + 有序关联容器: map, set, multimap, multiset
+    + 无序关联容器: unordered_map, unordered_set, unordered_multimap, unordered_multiset
+
++ 小结
+  + 。。。
+
++ 下一步
+  + cuda， cudnn， tensorrt
+  + 深拷贝，
+    + memcpy,strcpy,strlen()
+      + 
+  + 排序
+    + std::sort() lambda() 
+    + algorithm
+      + std::sort
+      + std::merge
+      + std::find_if
+      + std::for_each
+      + 
+  + cuda
+    + NVIDIA,
+    + 异构
+  + C++ 内存模型，堆栈一些概念
