--- a/Personal/2024-07-23-2024年工作笔记.md.md
+++ b/Personal/2024-07-23-2024年工作笔记.md.md
@@ -1627,3 +1627,7 @@ last_modified_date: 2024-07-30 10:00:00 +0800
 + 07.30
   + 面试
     + 准备申通面试 [done]
+  + 面试中遇到的问题
+    + 内存共享 memcpy() 访问方式
+  + 提升
+    + tensorRT学习
