--- a/Personal/2024-05-22-资金.md
+++ b/Personal/2024-05-22-资金.md
@@ -141,3 +141,37 @@ tag: Personal
   + 存钱: 8000
   + 日常开销: 1000+
   + 剩余: 2395.3 - 1000 + 400 = 1800
+
+## 2024.05.10
+
++ 2023年存款 3w
++ 2024年存款 6k + 5k + 8k = 1.9w
+
+## 2024.06.08
+
++ 2023年存款 3w
++ 2024年存款 1.9w + 0.6w = 2.5w
+
+## 2024.07.31
+
++ 2023年存款 3w
++ 2024年存款 2.5w + 1.65w = 4.15w
+
++ 当前余额
+  + 微信: 441.31
+  + 招商: 4527.03
+  + 农业: 1.15
+  + 中国: 22.2
+  + 总计: 4991.69
+
++ 大额消费
+  + 魔方公寓房租: 1250
+  + 大食堂会员: 200
+  + 乐游暑期观光卡: 398
+  + 水蜜桃: 130 + 150 + 100 = 380
+  + 总计: 2228
+
++ 未来规划
+  + 存钱: 5000 + 2400 + 1500 = 8900
+  + 日常开销: 1250 + 1500 = 2750+
+  + 剩余: 4991.69 - 2750 = 2241.69
