--- a/Personal/2024-07-23-2024年工作笔记.md.md
+++ b/Personal/2024-07-23-2024年工作笔记.md.md
@@ -1631,3 +1631,7 @@ last_modified_date: 2024-07-30 10:00:00 +0800
     + 内存共享 memcpy() 访问方式
   + 提升
     + tensorRT学习
+
++ 07.31
+  + 流媒体开发
+    + ffmpeg 取rtsp视频流
