--- a/Personal/2024-07-23-2024年工作笔记.md.md
+++ b/Personal/2024-07-23-2024年工作笔记.md.md
@@ -1557,7 +1557,7 @@ last_modified_date: 2024-07-30 10:00:00 +0800
 + 07.21
   + 休息
 
-## 2024.07.21 - 2024.07.27
+## 2024.07.21 - 2024.07.28
 
 + 07.21
   + C++ STL基础
@@ -1614,6 +1614,8 @@ last_modified_date: 2024-07-30 10:00:00 +0800
 + 07.28
   + 休息
 
+## 2024.07.28 - 2024.08.04
+
 + 07.29
   + 面试
     + 准备7月30日的申通面试
@@ -1635,3 +1637,9 @@ last_modified_date: 2024-07-30 10:00:00 +0800
 + 07.31
   + 流媒体开发
     + ffmpeg 取rtsp视频流
+
++ 08.01
+  + 面试
+    + 樵戈机器人公司 C++开发面试
+  + 学习
+    + 进程间通讯机制之共享内存
