--- a/Project/rk_工地盒子/rk_doc/2024-05-22-1-18_版本发行.md
+++ b/Project/rk_工地盒子/rk_doc/2024-05-22-1-18_版本发行.md
@@ -155,6 +155,31 @@ curl -X POST --data "{\"id\":\"rA5ox\"}" http://127.0.0.1:8000/api/setting/task/
 # 任务列表
 curl -X GET http://127.0.0.1:8000/api/setting/task/list
 
+# 获取任务配置
+curl --location --request GET 'http://127.0.0.1:8000/api/setting/task/get_task_config' \
+--header 'User-Agent: Apifox/1.0.0 (https://apifox.com)' \
+--header 'Content-Type: application/json' \
+--header 'Accept: */*' \
+--header 'Host: 127.0.0.1:8000' \
+--header 'Connection: keep-alive' \
+--data-raw '{
+    "id":"wtaV2"
+}'
+
+# 更新任务配置
+curl --location --request POST 'http://127.0.0.1:8000/api/setting/task/update_task_config' \
+--header 'User-Agent: Apifox/1.0.0 (https://apifox.com)' \
+--header 'Content-Type: application/json' \
+--header 'Accept: */*' \
+--header 'Host: 127.0.0.1:8000' \
+--header 'Connection: keep-alive' \
+--data-raw '{
+    "id":"wtaV2",
+    "alert_time": 5,
+    "detect_region": null,
+    "threshold": 80 
+}'
+
 # 相机列表
 curl -X GET http://127.0.0.1:8000/api/setting/camera/list
 
