--- a/Project/rk_工地盒子/rk_doc/2024-05-22-1-24_云平台管理.md
+++ b/Project/rk_工地盒子/rk_doc/2024-05-22-1-24_云平台管理.md
@@ -15,3 +15,10 @@ tag: ProjectOfRK
   + f76b3d1b-49c8-35c5-433c-335715e742c8
 + 设备密钥
   + 36f54b13-5caa-46e3-bcf6-8393655aef5d
+
+## gh-rk-1020
+
++ 设备密钥
+  + 14083bd9-4f4b-4284-8b7b-40b8456bcfbf
++ 盒子序列号
+  + d3d850f5-8bc4-b9d1-1d74-71d9315072dd
