--- a/Personal/2024-07-23-2024年工作笔记.md.md
+++ b/Personal/2024-07-23-2024年工作笔记.md.md
@@ -1640,6 +1640,16 @@ last_modified_date: 2024-07-30 10:00:00 +0800
 
 + 08.01
   + 面试
-    + 樵戈机器人公司 C++开发面试
+    + 樵戈机器人公司 C++开发面试 [done]
   + 学习
     + 进程间通讯机制之共享内存
+
++ 08.02
+  + 学习
+    + 进程间通讯机制之共享内存
+    + 流媒体开发工具 
+      + live555
+        + 编译成功，注意事项有: 编译时指定编译平台 linux-64bit；修改 config.linux-64bit脚本，加上-std=c++2a 避免编译时找不到 std::atomic_flag.test()，因为只有C++20才支持
+        + 示例中rtsp客户端运行成功
+      + ZLmediakit
+      + srs
