--- a/CMake/cmake_3_常用技巧/2024-05-22-cmake_3_02_常用技巧.md
+++ b/CMake/cmake_3_常用技巧/2024-05-22-cmake_3_02_常用技巧.md
@@ -9,6 +9,22 @@ tag: CMake
 
 + cmake 常用的技巧
 
+## cmake 静态链接库顺序问题
+
++ 默认情况下要求被依赖的库放在依赖它的库后面，当一个程序或共享库依赖的静态库较多时，可能会陷入解决链接问题的坑中。如果对静态库不熟悉，需要结构nm等工具来解决顺序问题。
+
++ 如果去掉顺序的烦恼和痛苦，可以采用如下方法
+```cmake
+target_link_libraries(
+    x
+    -Wl,--start-group
+    libX1.a
+    libX3.a
+    libX2.a
+    -Wl,--end-group
+)
+```
+
 ## cmake 设置编译线程数量
 
 在使用 CMake 构建项目时，你可以通过设置编译器选项来指定编译时使用的线程数量。具体步骤如下：
