--- a/Compiler/2024-05-22-gcc_1_理论基础.md
+++ b/Compiler/2024-05-22-gcc_1_理论基础.md
@@ -9,6 +9,84 @@ tag: GCC
 
 + gcc 编译器相关理论知识
 
+## linux gcc -Wl参数 详解
+
+在 Linux 上使用 `gcc` 编译器进行编译和链接时，可以通过 `-Wl` 参数直接传递选项给链接器 `ld`。`-Wl` 后面的参数会直接传递给链接器，多个选项可以用逗号分隔。
+
+### 常用 `-Wl` 参数
+
+1. **-Wl,-rpath,<dir>**
+   - 指定运行时库路径，告诉动态链接器在运行时到 `<dir>` 目录查找共享库。
+   ```bash
+   gcc -o myprogram main.o -Wl,-rpath,/path/to/libs
+   ```
+
+2. **-Wl,-rpath-link,<dir>**
+   - 指定链接时库路径，告诉链接器在链接时到 `<dir>` 目录查找共享库。
+   ```bash
+   gcc -o myprogram main.o -Wl,-rpath-link,/path/to/libs
+   ```
+
+3. **-Wl,-L,<dir>**
+   - 添加库搜索路径，告诉链接器在 `<dir>` 目录中查找库文件。
+   ```bash
+   gcc -o myprogram main.o -Wl,-L,/path/to/libs -lmath
+   ```
+
+4. **-Wl,-Bstatic**
+   - 强制使用静态链接，即使存在动态库也不使用。
+   ```bash
+   gcc -o myprogram main.o -Wl,-Bstatic -lmath
+   ```
+
+5. **-Wl,-Bdynamic**
+   - 强制使用动态链接。
+   ```bash
+   gcc -o myprogram main.o -Wl,-Bdynamic -lmath
+   ```
+
+6. **-Wl,-O1**
+   - 启用链接器优化。
+   ```bash
+   gcc -o myprogram main.o -Wl,-O1
+   ```
+
+7. **-Wl,--start-group 和 -Wl,--end-group**
+   - 将一组库文件放在一起，解决符号依赖问题。
+   ```bash
+   gcc -o myprogram main.o -Wl,--start-group -lfoo -lbar -Wl,--end-group
+   ```
+
+8. **-Wl,-Map,<file>**
+   - 生成链接映射文件，帮助分析和调试。
+   ```bash
+   gcc -o myprogram main.o -Wl,-Map,myprogram.map
+   ```
+
+### 示例
+
+假设我们有以下文件：
+- `main.c`：包含主函数的源文件。
+- `utils.c`：包含辅助函数的源文件。
+- 库文件 `libmath.a` 存放在 `/path/to/libs` 目录下。
+
+我们希望将这些文件编译并链接成一个可执行文件，并指定运行时库路径和生成映射文件：
+
+```bash
+gcc -c main.c utils.c
+gcc -o myprogram main.o utils.o -Wl,-L,/path/to/libs,-rpath,/path/to/libs,-Map,myprogram.map -lmath
+```
+
+上面的命令做了以下几件事：
+1. 编译 `main.c` 和 `utils.c` 生成目标文件 `main.o` 和 `utils.o`。
+2. 链接生成可执行文件 `myprogram`。
+3. 指定库搜索路径为 `/path/to/libs`。
+4. 指定运行时库路径为 `/path/to/libs`。
+5. 生成链接映射文件 `myprogram.map`。
+6. 链接静态库 `libmath.a`。
+
+通过使用 `-Wl` 参数，可以更灵活地控制链接器的行为，以满足特定的编译和链接需求。
+
 ## GCC -Wunused-parameter 编译参数
 
 GCC 编译器提供了许多编译参数，可以用来控制编译过程中的警告和错误提示。其中，`-Wunused-parameter` 是一个编译参数，用于控制是否在编译过程中检测未使用的函数参数，并生成相应的警告信息。
