--- a/Personal/2024-07-23-2024年工作笔记.md.md
+++ b/Personal/2024-07-23-2024年工作笔记.md.md
@@ -1653,3 +1653,15 @@ last_modified_date: 2024-07-30 10:00:00 +0800
         + 示例中rtsp客户端运行成功
       + ZLmediakit
       + srs
+
++ 08.03
+  + 休息
+
++ 08.04
+  + 学习
+    + 流媒体开发工具 
+      + ZLmediakit
+      + srs
+
++ 08.05
+  + 
