--- a/Personal/2024-07-23-2024年工作笔记.md.md
+++ b/Personal/2024-07-23-2024年工作笔记.md.md
@@ -1664,4 +1664,7 @@ last_modified_date: 2024-07-30 10:00:00 +0800
       + srs
 
 + 08.05
-  + 
+  + 解决cmake中静态库链接循序问题
+
++ 08.06
+  + 解决交换空间自动设置问题
