--- a/Project/rk_工地盒子/rk_doc/2024-05-22-1-0_镜像发行.md
+++ b/Project/rk_工地盒子/rk_doc/2024-05-22-1-0_镜像发行.md
@@ -295,3 +295,21 @@ cat /userdata/rk_image.tar | docker import - rk1126:20240719
 ```bash 
 docker run -d --privileged=true --restart=always --network=host --log-opt max-size=10m --log-opt max-file=3  -v /userdata/:/userdata/ -v /tmp/:/tmp/ -v /dev/galcore:/dev/galcore -v /usr/:/rk_usr/ --device=/dev/galcore  rk1126:20240719 /bin/bash /data/static/bash/auto-run.sh
 ```
+
+## 20240807
+
++ v20版本镜像
+
++ dist
+  + 修改任务配置
+  + 修改大屏标题
+
++ 加载镜像命令
+```bash
+cat /userdata/rk_image.tar | docker import - rk1126:20240807
+```
+
++ 启动容器命令
+```bash 
+docker run -d --privileged=true --restart=always --network=host --log-opt max-size=10m --log-opt max-file=3  -v /userdata/:/userdata/ -v /tmp/:/tmp/ -v /dev/galcore:/dev/galcore -v /usr/:/rk_usr/ --device=/dev/galcore  rk1126:20240807 /bin/bash /data/static/bash/auto-run.sh
+```
