--- a/Project/rk_工地盒子/rk_doc/2024-05-22-1-18_版本发行.md
+++ b/Project/rk_工地盒子/rk_doc/2024-05-22-1-18_版本发行.md
@@ -133,7 +133,7 @@ curl --location --request POST 'http://127.0.0.1:8000/api/setting/task/add' \
 --data-raw '{
     "name":"安全帽",
     "start":1,
-    "source":17,
+    "source":13,
     "schedulerType":"Daemon",
     "models":{
         "id":3,
@@ -147,7 +147,7 @@ curl --location --request POST 'http://127.0.0.1:8000/api/setting/task/add' \
 curl -X POST --data "{\"id\":\"rA5ox\"}" http://127.0.0.1:8000/api/setting/task/stop
 
 # 删除任务
-curl -X POST --data "{\"ids\":[\"dLgKi\"]}" http://127.0.0.1:8000/api/setting/task/delete
+curl -X POST --data "{\"ids\":[\"C80Q8\"]}" http://127.0.0.1:8000/api/setting/task/delete
 
 # 启动任务
 curl -X POST --data "{\"id\":\"rA5ox\"}" http://127.0.0.1:8000/api/setting/task/start
@@ -192,7 +192,7 @@ curl --location --request POST 'http://127.0.0.1:8000/api/setting/camera/delete'
 --header 'Connection: keep-alive' \
 --data-raw '{
     "ids": [
-        16
+        12
     ]
 }'
 
@@ -204,8 +204,8 @@ curl --location --request POST 'http://127.0.0.1:8000/api/setting/camera/add' \
 --header 'Host: 192.169.5.61:8000' \
 --header 'Connection: keep-alive' \
 --data-raw '{
-    "name": "中维世纪施工现场187",
-    "url":"rtsp://admin:jk123456@192.168.6.187"
+    "name": "0.237",
+    "url":"rtsp://admin:hkkj1234@172.16.0.237:554/stream2"
 }'
 
 # 相机测试
