--- a/Project/rk_工地盒子/rk_doc/2024-05-31_平台对接.md
+++ b/Project/rk_工地盒子/rk_doc/2024-05-31_平台对接.md
@@ -19,3 +19,9 @@
 + https://wisdomsite.ticdata.cn/zhgd-cus/openApi/token&https://wisdomsite.ticdata.cn/smart-mon/openApi/addAiData
 + 账号: qian001
 + 密码: 12345678
+
+
+
+frpc名: yx039
+车冲序列号: 7d7cc06e-cd56-fdce-545b-06ed36ae1d74
+车冲远程命令: ssh -o 'proxycommand socat - PROXY:47.100.31.121:yx039:22,proxyport=5002' linaro@47.100.31.121
