--- a/Personal/2024-07-23-2024年工作笔记.md.md
+++ b/Personal/2024-07-23-2024年工作笔记.md.md
@@ -1663,8 +1663,50 @@ last_modified_date: 2024-07-30 10:00:00 +0800
       + ZLmediakit
       + srs
 
+## 2024.08.04 - 2024.08.11
+
 + 08.05
   + 解决cmake中静态库链接循序问题
 
 + 08.06
-  + 解决交换空间自动设置问题
+  + 解决交换空间自动设置问题 [done]
+
++ 08.07
+  + 准备上海智能制造平台有限公司机器人软件开发岗位面试
+    + 复习机器人学相关知识
+
++ 08.08
+  + 参加上海智能制造平台有限公司机器人软件开发岗位面试
+
++ 08.09
+  + rk
+    + 调试水星安防摄像头问题
+
++ 08.10
+  + 面试
+    + 盛拓半导体--软件开发工程师(苏州)
+    + Cogent高骏科技--C++音视频软件开发工程师(上海)
+
++ 08.11
+  + 休息
+
+## 2024.08.12 - 2024.08.18
+
++ 08.12
+  + 高骏科技面试[done]
+
++ 08.13
+  + 确定offer
+
++ 08.14
+  + 休息
+
++ 08.15
+  + 体检
+  + 看房子
+
++ 08.16
+  + 休息
+
++ 08.17
+  + 准备入职
