update work note

--- a/Personal/2024-07-23-2024年工作笔记.md
+++ b/Personal/2024-07-23-2024年工作笔记.md
@@ -1710,3 +1710,19 @@ last_modified_date: 2024-07-30 10:00:00 +0800
 
 + 08.17
   + 准备入职
+
++ 08.18
+  + 休息
+
+## 2024.08.19 - 2024.08.25
+
++ 08.19
+  + 入职上海特机智机器人有限公司，职位为机器人软件研发，主要负责任务模块的研发。
+  + 项目背景: LNG(Liquefied Natural Gas,液化天然气)运输船建造过程中液舱的制造。制造流程大致为 划线-->碰焊-->装板。工作要求精度极高，用机器代替人工，提高精度和效率。
+  + 产品: 装板机器人，碰钉机器人
+  + 开发环境: windows
+  + 开发工具: visual studio 2017, qt5.1.4, clion
+  + 依赖库: Qt,Eigen,OpenCV,FFmpeg,spdlog
+
++ 08.20
+  + 搭建windows下开发环境，运行项目。
