--- a/Personal/2024-07-23-2024年工作笔记.md
+++ b/Personal/2024-07-23-2024年工作笔记.md
@@ -1725,4 +1725,17 @@ last_modified_date: 2024-07-30 10:00:00 +0800
   + 依赖库: Qt,Eigen,OpenCV,FFmpeg,spdlog
 
 + 08.20
-  + 搭建windows下开发环境，运行项目。
+  + 搭建windows下开发环境，运行项目。[done]
+    + 解决依赖库未找到问题: 将未找到的依赖库拷贝到项目的cmake-build-debug下即可
+  + 熟悉项目编译环境，并形成文档
+    + 编译器路径: C:\Program Files (x86)\Microsoft Visual Studio\2017\Community
+    + 编译器版本: visual visual 2017, 15.0
+    + cmake: bundled(3.29.6)
+    + build tool: ninja.exe
+    + C Compiler: cl.exe
+    + C++ Compiler: cl.exe
+    + Debugger: Bundled LLDB(9.0)
+  + 学习
+    + msvc: cl.exe
+    + qt: qthread, qvector, qatomicint
+    + spdlog
