--- a/Personal/2024-07-23-2024年工作笔记.md
+++ b/Personal/2024-07-23-2024年工作笔记.md
@@ -1739,3 +1739,14 @@ last_modified_date: 2024-07-30 10:00:00 +0800
     + msvc: cl.exe
     + qt: qthread, qvector, qatomicint
     + spdlog
+
++ 08.21
+  1. 完成微信文章 常用C和C++编译器推荐 学习笔记 [done]
+  2. 首先完成代码阅读笔记: 对软件功能，任务逻辑，主要函数进行说明；编制函数列表，说明函数接口，用途。[doing]
+     + mainwindows.cpp [done] 
+     + ComInterface
+       + 构造函数 [doing]
+     + CRobot
+     + VisionInterface
+     + CTask
+  3. 其次根据软件开发说明文档格式要求，完成文档编制
