--- a/CMake/cmake_2_常用函数/2024-05-22-cmake_2_01_常用函数.md
+++ b/CMake/cmake_2_常用函数/2024-05-22-cmake_2_01_常用函数.md
@@ -9,6 +9,162 @@ tag: CMake
 
 + cmake 常用函数
 
+## cmake get_target_property() 详解
+
+`get_target_property()` 是 CMake 中用于获取目标（target）属性的命令。它可以从指定的目标中检索特定的属性值，并将其存储在变量中。其常见语法如下：
+
+```cmake
+get_target_property(<variable> <target> <property>)
+```
+
+### 参数说明
+
+- `<variable>`：这是存储属性值的变量名。如果属性存在，其值将存储在此变量中。如果属性不存在，变量将设置为特殊值 `NOTFOUND`。
+
+- `<target>`：这是你希望查询属性的目标（通常是通过 `add_executable()`、`add_library()` 或 `add_custom_target()` 创建的目标）。
+
+- `<property>`：这是要查询的属性名称。CMake 中有许多内置的属性，比如 `INTERFACE_INCLUDE_DIRECTORIES`、`LOCATION`、`LINK_LIBRARIES` 等。
+
+### 使用示例
+
+假设有以下 CMake 配置：
+
+```cmake
+add_executable(my_executable main.cpp)
+set_target_properties(my_executable PROPERTIES VERSION 1.0 SOVERSION 1)
+```
+
+你可以使用 `get_target_property()` 获取属性值：
+
+```cmake
+get_target_property(version my_executable VERSION)
+message("my_executable version is: ${version}")
+```
+
+输出可能为：
+
+```
+my_executable version is: 1.0
+```
+
+### 常见属性
+
+- `LOCATION`：目标生成的二进制文件路径。
+- `INTERFACE_INCLUDE_DIRECTORIES`：指定此目标暴露给依赖它的目标的包含目录列表。
+- `LINK_LIBRARIES`：链接到该目标的库列表。
+- `COMPILE_DEFINITIONS`：目标的编译定义列表。
+
+### 注意事项
+
+- 如果指定的属性不存在，结果变量会被设置为 `NOTFOUND`，这在处理未定义属性时要特别注意。
+- 使用 `get_target_property()` 时，目标必须已经定义，否则会报错。
+
+### 进阶用法
+
+可以结合 `get_target_property()` 和条件判断来实现动态配置，例如：
+
+```cmake
+get_target_property(is_shared my_library TYPE)
+if(is_shared STREQUAL "SHARED_LIBRARY")
+    message("my_library is a shared library")
+endif()
+```
+
+这种用法对于复杂的 CMake 构建系统非常有用，能够动态获取目标的属性并做进一步操作。
+
+## cmake add_custom_command() 
+
+`add_custom_command()` 是 CMake 中的一个常用函数，用于为目标（target）添加自定义命令。这个函数可以配置在构建过程中生成文件、执行脚本、生成资源等操作。`add_custom_command()` 有两种主要的使用方式：一种是作为生成文件的一部分（`OUTPUT`），另一种是作为构建目标的依赖项（`TARGET`）。
+
+### 1. 基本语法
+```cmake
+add_custom_command(
+    OUTPUT output1 [output2 ...]
+    COMMAND command1 [ARGS [arg1 [arg2 ...]]] [command2 ...]
+    [MAIN_DEPENDENCY depend]
+    [DEPENDS [depend1 [depend2 ...]]]
+    [BYPRODUCTS [files ...]]
+    [IMPLICIT_DEPENDS <lang1> depend1 [<lang2> depend2] ...]
+    [WORKING_DIRECTORY dir]
+    [COMMENT comment]
+    [VERBATIM] [APPEND] [USES_TERMINAL]
+)
+```
+
+或者
+
+```cmake
+add_custom_command(
+    TARGET target
+    PRE_BUILD | PRE_LINK | POST_BUILD
+    COMMAND command1 [ARGS [arg1 [arg2 ...]]] [command2 ...]
+    [BYPRODUCTS [files ...]]
+    [WORKING_DIRECTORY dir]
+    [COMMENT comment]
+    [VERBATIM] [USES_TERMINAL]
+)
+```
+
+### 2. 参数说明
+
+#### 通用参数
+- **OUTPUT**: 指定自定义命令生成的文件列表。这些文件将被 CMake 认为是构建过程中的产物，因此可以在后续的构建步骤中使用。通常与 `DEPENDS` 配合使用。
+
+- **COMMAND**: 这是最重要的部分，指定要运行的命令。可以有多个 `COMMAND`，它们会按顺序执行。可以使用 `ARGS` 指定命令的参数。
+
+- **DEPENDS**: 指定该命令依赖的文件或目标。在这些依赖项发生变化时，自定义命令会重新运行。
+
+- **MAIN_DEPENDENCY**: 为某些工具链优化时指定主依赖文件，通常与编译相关。
+
+- **BYPRODUCTS**: 指定命令生成的副产物文件。特别是在多线程构建中有用，帮助 CMake 正确处理文件的生成顺序。
+
+- **WORKING_DIRECTORY**: 指定命令运行的工作目录。
+
+- **COMMENT**: 在执行命令时，显示的注释信息。
+
+- **VERBATIM**: 确保命令行是精确传递的，防止 CMake 对命令进行不必要的转义。通常建议使用。
+
+- **USES_TERMINAL**: 指示该命令需要一个终端运行，适用于需要用户交互的命令。
+
+#### 针对目标的参数
+- **TARGET**: 指定一个目标（例如可执行文件或库）。
+
+- **PRE_BUILD**: 命令在目标构建之前执行。
+
+- **PRE_LINK**: 命令在目标链接之前执行。
+
+- **POST_BUILD**: 命令在目标构建完成后执行。
+
+### 3. 常见用法示例
+
+#### 生成文件的自定义命令
+```cmake
+add_custom_command(
+    OUTPUT ${CMAKE_BINARY_DIR}/generated_file.cpp
+    COMMAND python ${CMAKE_SOURCE_DIR}/generate_script.py ${CMAKE_BINARY_DIR}/generated_file.cpp
+    DEPENDS ${CMAKE_SOURCE_DIR}/generate_script.py
+    COMMENT "Generating source file"
+)
+```
+这个例子展示了如何在构建过程中调用一个 Python 脚本生成源文件，并将其作为后续构建步骤的一部分。
+
+#### 为目标添加构建步骤
+```cmake
+add_custom_command(
+    TARGET MyExecutable
+    POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E echo "Build finished!"
+)
+```
+这个命令将在 `MyExecutable` 构建完成后，打印一条信息。
+
+### 4. 注意事项
+- 如果你使用 `OUTPUT` 参数，必须确保这些输出文件在命令成功执行后生成，否则 CMake 可能会重复运行命令。
+- 使用 `VERBATIM` 参数通常是最佳实践，因为它可以确保命令行正确传递，无需担心平台相关的转义问题。
+- 在复杂项目中，自定义命令应合理使用依赖关系，确保构建顺序的正确性。
+
+`add_custom_command()` 在处理自定义构建步骤时非常强大，合理利用可以显著提高项目构建的灵活性。
+
 ## cmake add_subdirectory() 函数 详解
 
 `add_subdirectory()` 是 CMake 中的一个函数，用于向 CMake 构建系统添加一个子目录。当你的项目结构比较复杂，需要将代码分割成多个目录时，`add_subdirectory()` 可以很方便地帮助你组织代码和构建系统。
