--- a/Books/2024-08-23-QtC++开发指南.md
+++ b/Books/2024-08-23-QtC++开发指南.md
@@ -63,4 +63,140 @@ tag: book
 #### 1.4.1 新建一个项目
 
 + Qt Creator可以创建多种项目，各类应用程序如下
-  + Qt Widgets Application，支持桌面平台的有图形用户界面(Graphic User Interface,GUI)界面的
+  + Qt Widgets Application，支持桌面平台的有图形用户界面(Graphic User Interface,GUI)界面的应用程序。GUI的设计完全基于C++语言，采用Qt提供的一套C++类库。
+  + Qt Console Application，控制台应用程序，无GUI界面，一般用于学习C/C++语言。
+  + Qt Quick Application, 创建可部署的Qt Quick 2应用程序。Qt Quick是Qt支持的一套GUI开发架构，其界面设计采用QML语言，程序架构采用C++语言。利用Qt Quick可以设计非常炫的用户界面，一般用于移动设备或嵌入式设备上无边框的应用程序的设计。
+  + Qt Quick Controls 2 Application，创建基于Qt Quick Controls 2组件的可部署的Qt Quick 2应用程序。
+  + Qt Canvas 3D Application，创建Qt Canvas 3D QML项目，也是基于QML语言的界面设计，支持3D画布。
+
++ 界面的基类(base class)，有3中基类可以选择
+  + QMainWindow 是主窗口类，主窗口具有主菜单栏，工具栏和状态栏，类似于一般的应用程序的主窗口；
+  + QWidget 是所有具有可视界面类的基类，选择QWidget创建的界面对各种界面组件都可以支持
+  + QDialog 是对话框类，可建立一个基于对话框的界面
+
+## 第二章 GUI应用程序设计基础
+
++ 本章深入的介绍Qt Creator设计GUI应用程序的基本方法，包括Qt创建的应用程序项目的 基本组织结构，可视化设计的UI界面文件的原理和运行机制，信号与槽的使用方法，窗体可视化设计的底层原理，应用程序的窗体，组件布局，菜单，工具栏，Actions等常见设计元素的使用方法。
+
+### 2.1 UI文件设计与运行机制
+
+#### 2.1.1 项目文件组成
+
++ 一个Widget Application项目包含一下一些文件
+  + 项目组织文件 samp2_1.pro,存储项目设置的文件
+  + 主程序入口文件main.cpp,实现main()函数的程序文件
+  + 窗体界面文件widget.ui，一个XML格式存储的窗体上的元件及其布局的文件
+  + widget.h是所设计的窗体类的头文件，widget.cpp是widget.h里定义类的实现文件。在C++里，**任何窗体或界面组件都是用类封装的**，一个类一般有一个头文件和一个源文件。
+
+#### 2.1.2 项目管理文件
+
++ 后缀为.pro的文件是项目的管理文件，文件名就是项目的名称
+
+#### 2.1.3 界面文件
+
++ 后缀为 .ui 的文件是可视化设计的窗体的定义文件，例如 widget.ui
++ 本书后面将成这个集成在Qt Creator中的Qt Designer为 UI设计器，以便与独立运行的Qt Designer区别开来
+
+#### 2.1.4 主函数文件
+
++ main函数是应用程序的入口。它的主要功能是创建应用程序，创建窗口，显示窗口，并运行从应用程序，开始应用程序的消息循环和事件处理。
+
+#### 2.1.5 窗体相关的文件
+
++ 为了搞清楚窗体类的定义，以及界面功能的实现原理，香茗居编译后会自动生成一个文件 ui_widget.h，这样对于一个窗体，就有四个文件
+  + widget.h 定义窗体类的头文件定义了类Widget
+  + widget.cpp Widget类的功能实现源程序文件
+  + widget.ui 窗体界面文件，由UI设计器自动生成，存储了窗体上各个组件的属性设置和布局
+  + ui_widget.h 编译后，根据窗体上的组件及其属性，信号与槽的关联自动生成的一个类的定义文件，类的名称是Ui_Widget
+
+### 2.2
+
+#### 2.2.3 信号与槽
+
++ 信号与槽(Signal & Slot)是Qt编程的基础，也是Qt的一大创新。因为有了信号与槽的编程机制，在Qt中处理界面各个组件的交互操作时变得更加直观和简单。
++ 信号(Signal)就是在特定情况下被发射的事件，例如PushButton最常见的信号就是鼠标单击时发射的clicked()信号，一个ComboBox最常见的信号是选择的列表项变化时发射的CurrentIndexChanged()信号。GUI程序设计的主要内容就是对界面上各组件的信号的相应，只需要知道什么情况下发射哪些信号，合理的去响应和处理这些信号就可以了。
++ 槽(Slot)就是对信号响应的函数。槽就是一个函数，与一般的C++函数是一样的，可以定义在类的任何部分(public, private或protected)，可以具有任何参数，也可以被直接调用。槽函数与一般函数不同的是: **槽函数可以与一个信号关联，当信号被发射时，关联的槽函数被自动执行**。
++ 信号与槽关联是用QObject::connect()函数实现的，其基本格式是：
+```cpp
+QObject::connect(sender, SIGNAL(signal()), reciver, SLOT(slot()));
+```
++ connect()是QObject类的一个静态函数，而QObject是所有Qt类的基类，在实际调用时可以忽略前面的限定符，所以可以直接写为: 
+```cpp
+connect(sender, SIGNAL(signal()), reciver, SLOT(slot()));
+```
+  + 其中，sender是发射信号的对象的名称，signal()是信号名称。信号可以看作是特殊的函数，需要带括号，有参数时还需要指明参数。receiver是接收信号的对象名称，slot()是槽函数的名称，需要带括号，有参数时还需要指明参数。
+  + SIGNAL和SLOT是Qt的宏，用于指明信号和槽，并将它们的参数转换为相应的字符串。例如
+```cpp
+QObject::connect(btnClose, SIGNAL(clicked()), Widget, SLOT(close()));
+```
+  + 其作用就是将btnClose按钮的clicked()信号与窗体(Widget)的槽函数close()相关联，这样，当单击btnClose按钮时，就会执行Widget的Close()槽函数。
+
++ 关于信号与槽的使用，有以下一些规则需要注意
+  + 一个信号可以连接多个槽，例如
+```cpp
+connect(spinNum, SIGNAL(valueChanged(int)), this, SLOT(addFun(int)));
+connect(spinNum, SIGNAL(valueChanged(int)), this, SLOT(updateStatus(int)));
+```
+    + 这是当一个对象spinNUm的数值发生变化时，所在窗体有两个槽进行响应，一个addFun()用于计算，一个updateStatus()用于更新状态。
+    + 当一个信号与多个槽函数关联时，槽函数按照建立连接时的顺序依次执行。
+    + 当信号和槽函数带有参数时，在connect()函数里，要写明参数的类型，但可以不写参数名称。
+  + 多个信号可以连接同一个槽，例如
+```cpp
+connect(ui->rBtnBlue, SIGNAL(clicked()), this, SLOT(setTextFontColor()));
+connect(ui->rBtnRed, SIGNAL(clicked()), this, SLOG(setTextFontColor()));
+connect(ui->rBtnBlack, SIGNAL(clicked()), this, SLOG(setTextFontColor()));
+```
+    + 这样，当任何一个RadioButton被单击时，都会执行setTextFontColor()函数。
+  + 一个信号可以连接另外一个信号，例如
+```cpp
+connect(spinNum, SIGNAL(valueChanged(int)), this, SIGNAL(refreshInfo(int)));
+```
+    + 这样，当一个信号发射时，也会发射另外一个信号，实现某些特殊的功能。
+  + 严格情况下，信号与槽的参数个数和类型需要一致，至少信号的参数不能少于槽的参数。如果不匹配，会出现编译错误或运行错误。
+  + 在使用信号与槽的类中，必须在类的定义中加入宏Q_OBJECT
+  + 当一个信号被发射时，与其关联的槽函数通常被立即执行，就像正常调用一个函数一样。只有当信号关联的所有槽函数执行完毕后，才会执行发射信号处后面的代码。
++ 信号与槽机制是Qt GUI编程的基础，使用信号与槽机制可以比较容易的将信号与响应代码关联起来。
+
+## 第三章 Qt类库概述
+
++ Qt是一个用标准C++编写的跨平台开发类库，它对标准C++进行了扩展，引入了元对象系统，信号与槽，属性等特性，使应用程序的开发变得更高效。本章将介绍Qt的这些核心特点，对于理解和编写高效的Qt C++程序是大有帮助的。
++ 本章还介绍<QtGlobal>头文件中Qt的一些全局定义，包括数据类型，函数和宏等，介绍Qt的容器类及其响应迭代器的使用方法。这些全局定义和容器类在程序中经常用到，了解其原理便于理解后面遇到的一些实例程序。
++ Qt类库中大量的类是以模块形式分类组织的，包括基本模块和扩展模块等，本章对这些模块做一个总体的介绍。一个模块通常就是一个编程主题，例如数据库，图表，网格等。本书后面的章节一般是每章介绍一个编程主题。
+
+### 3.1 Qt核心特点
+
+#### 3.1.1 概述
+
++ Qt本身并不是一种编程语言，它实质上是一个跨平台的C++开发类库，是用标准C++编写的类库，它为开发GUI应用程序和非GUI应用程序提供了各种类。
++ Qt对标准C++进行了扩展，引入了一些新的概念和功能，例如信号与槽，对象属性等。Qt的元对象编译器(Meta-Object Compiler, MOC)是一个预处理器，在源程序被编译前先将这些Qt特性的程序转换为标准C++兼容的形式，然后再由标准C++编译器进行编译。这就是为什么在使用信号与槽机制的类里，必须添加一个Q_OBJECT宏的原因，只有添加了这个宏，moc才能对类里的信号与槽的代码进行预处理。
+
++ Qt Core模块是Qt类库的核心，所有其他模块都依赖于此模块。Qt 为C++语言增加的特性就是在Qt Core模块里实现的，这些扩展特性由Qt的元对象系统实现，包括信号与槽机制，属性系统，动态类型转换等。
+
+#### 3.1.2 元对象系统
+
++ Qt的元对象系统(Meta-Object System)提供了对象之间通信的信号与槽机制，运行时类型信息和动态属性系统。
++ 元对象系统由以下三个基础组成
+  + QObject类是所有使用元对象系统的类的基类。
+  + 在一个类的private部分声明Q_OBJECT宏，使得类可以使用元对象的特性，例如动态属性，信号与槽。
+  + MOC(元对象编译器)为每个QObject的子类提供必要的代码来实现元对象系统的特性。
++ 构建项目时，MOC工具读取C++源文件，当它发现类的定义里有Q_OBJECT宏时，它就会为这个类生成另外一个包含有元对象支持代码的C++源文件，这个生成的源文件连同类的实现文件一起被编译和链接。
+
++ 除了信号与槽机制外，元对象还提供如下一些功能
+  + QOBject::metaObject()函数返回类关联的元对象，元对象类QMetaObject包含了访问对象的一些接口函数，例如QMetaObject::className()函数可在运行时返回类的名称字符串。
+```cpp
+QObject *obj = new QPushButton;
+obj->metaObject()->className();  // 返回"QPushButton
+```
+  + QMetaObject::newInstance()函数创建类的一个新的实例
+  + QObject::inherits(const char* className)函数判断一个对象实例是否是名称为className的类或QObject的子类的实例。例如
+```cpp
+QTimer *timer = new QTimer; // QTimer是QObject的子类
+timer->inherits("QTimer");  // 返回true
+timer->inherits("QObject"); // 返回true
+timer->inherits("QAbstractButton"); // 返回false，不是QAbstractButton的子类
+```
+  + QObject::tr()和QObject::trUtf8()函数可翻译字符串，用于多语言界面设计。
+  + QObject::setProperty()和QObject::property()函数用于通过属性名称动态设置和获取属性值。
+
++ 对于QObject及其子类，还可以使用qobject_cast()函数进行动态映射(dynamic cast)。
++ 使用动态投射，使得程序可以在运行时对不同的对象做不同的处理。
