--- a/Windows/2024-05-22-windows_02_常用命令.md
+++ b/Windows/2024-05-22-windows_02_常用命令.md
@@ -9,6 +9,57 @@ tag: Windows
 
 + Windows下常用命令
 
+## windows chcp命令 详解
+
+`CHCP`（Change Code Page）是 Windows 命令行中的一个命令，用于更改或显示当前的代码页（code page）。代码页决定了控制台显示和输入字符时所使用的字符集（字符编码）。不同代码页对应不同的字符集，比如 ANSI、UTF-8 或特定语言的字符集。
+
+### 使用语法
+```bash
+CHCP [<代码页>]
+```
+
+- **无参数时**：显示当前活动的代码页。
+- **指定代码页时**：更改当前控制台的代码页。
+
+### 常见代码页
+- `437`：美国英语（默认的原始代码页）
+- `936`：简体中文（GBK）
+- `65001`：UTF-8（用于多语言支持）
+
+### 示例
+1. **查看当前代码页：**
+   ```bash
+   CHCP
+   ```
+   输出例子：
+   ```
+   活动代码页: 936
+   ```
+   上述例子显示当前代码页是 936（简体中文）。
+
+2. **更改为 UTF-8：**
+   ```bash
+   CHCP 65001
+   ```
+   更改为 UTF-8 编码。执行后，控制台将使用 UTF-8 显示和输入字符。
+
+3. **更改为简体中文：**
+   ```bash
+   CHCP 936
+   ```
+   这会切换到简体中文字符集。
+
+### 注意事项
+- 更改代码页可能会影响控制台显示字符的正确性，尤其在涉及不同语言或特殊符号时。
+- 有些程序可能对某些代码页支持有限，切换代码页后可能导致显示或输入异常。
+
+### 应用场景
+- 处理不同语言的文本输出。
+- 使用脚本时确保字符集兼容性。
+- 跨平台执行脚本时（如 UTF-8 兼容）。
+
+总之，`CHCP` 命令是用来管理控制台字符编码的重要工具，特别是在处理多语言环境时十分有用。
+
 ## windows slmgr命令是什么
 
 `slmgr` 是 Windows 操作系统中的软件许可证管理工具，主要用于管理和激活 Windows 许可证。`slmgr` 实际上是 `Software Licensing Management Tool` 的缩写，通常通过命令行使用。以下是一些常见的 `slmgr` 命令及其功能：
