--- a/Books/2024-08-23-QtC++开发指南.md
+++ b/Books/2024-08-23-QtC++开发指南.md
@@ -200,3 +200,399 @@ timer->inherits("QAbstractButton"); // 返回false，不是QAbstractButton的子
 
 + 对于QObject及其子类，还可以使用qobject_cast()函数进行动态映射(dynamic cast)。
 + 使用动态投射，使得程序可以在运行时对不同的对象做不同的处理。
+
+#### 3.1.3 属性系统
+
++ Qt提供一个 Q_PROPERTY()宏可以定义属性，它也是基于元对象系统实现的。Qt的属性系统与C++编译器无关，可以用任何标准的C++编译器编译定义了属性的QtC++程序。
++ Q_PROPERTY宏定义一个返回值类型为type，名称为name的属性，用READ，WRITE关键字定义属性的读取，写入函数，还有其他的一些关键字定义属性的一些操作特性。属性的类型可以是QVariant支持的任何类型，也可以用户自定义类型。
++ Q_PROPERTY宏定义属性的一些主要关键字的意义如下
++ READ: 指定一个读取属性值的函数，没有MEMBER关键字时必须设置READ
++ WRITE: 指定一个设定属性值的函数，只读属性没有WRITE设置
++ MEMBER: 指定一个成员变量与属性关联，成为可读可写的属性，无需再设置READ和WRITE
++ RESET: 是可选的，用于指定一个设置属性缺省值的函数
++ NOTIFY: 是可选的，用于设置一个信号，当属性值变化时发射此信号
++ DESIGNABLE: 表示属性是否在Qt Designer里可见，缺省为true
++ CONSTANT: 表示属性值是一个常数，对于一个对象实例，READ指定的函数返回值是常数，但是每个实例的返回值可以不一样。具有CONSTANT关键字的属性不能有WRITE和NOTIFY关键字。
++ FINAL: 表示所定义的属性不能被子类重载
+
+#### 3.1.4 信号与槽
+
++ 信号与槽是Qt的一个核心特点，也是它区别于其他框架的重要特性。信号与槽是对象间进行通信的机制，也需要由Qt的元对象系统支持才能实现的。
++ Qt使用信号与槽的机制实现对象间通信，它隐藏了复杂的底层实现，完成信号与槽的关联后，发射信号时并不需要知道Qt是如何找到槽函数的。Qt的信号与槽机制与Delphi和C++ Builder的"事件--响应"比较类似，但是更加灵活。
+
++ 某些开发架构使用回调函数(callback)实现对象间通信。与回调函数相比，信号与槽的执行速度稍微慢一点，因为需要查找连接的对象和槽函数，但是这种差别在应用程序运行时是感觉不到的，而其提供的灵活性却比回调函数强很多。
++ 对信号与槽的特点和用法做一些补充
+  1. connect()函数的不同参数形式
+    + QObject::connect()函数有多重参数形式，一种参数形式的函数原型是
+```cpp
+QMetaObject::Connection QObject::connect(const QObject *sender, const char *signal, const QObject *receiver, const char *method, Qt::ConnectionType type = Qt::AutoConnection);
+```
+    + 使用这种参数形式的connect()进行信号与槽函数的连接时，一般句法如下
+```cpp
+connect(sender, SIGNAL(signal()), receiver, SLOT(slot()));
+```
+  + 这里使用了宏SIGNAL()和SLOT()指定信号和槽函数，而且如果信号和槽函数带有参数，还需要注明参数类型，例如
+```cpp
+connect(spinNum, SIGNAL(valueChanged(int)), this, SLOT(updateStatus(int)));
+```
+  + 另外一种参数形式的connect()函数的原型是:
+```cpp
+QMetaObject::Connection QObject::connect(const QObject *sender, const QMetaMethod &signal, const QObject *receiver, const QMetaMethod &method, Qt::ConnectionType type = Qt::AutoConnection);
+```
+  + 对于具有默认参数的信号与槽(即信号名称是唯一的，没有参数不同而同名的两个信号)，可以使用这种函数指针形式进行关联，例如
+```cpp
+connect(lineEdit, &QLineEdit::textChanged, this, &widget::on_textChanged);
+```
+ + 不管是哪种参数形式的connect()函数，最后一个参数Qt::ConnectionType type，缺省值为Qt::AutoConnection。枚举类型Qt::ConnectionType表示了信号与槽之间的关联方式，有以下几种取值:
+   + Qt::AutoConnection(缺省值): 如果信号的接收者与发射者在同一个线程，就使用Qt::DirectConnection方式；否则使用Qt::QueuedConnection方式，在信号发射时自动确定关联方式
+   + Qt::DirectConnection: 信号被发射时槽函数立即执行，槽函数与信号在同一个线程
+   + Qt::QueuedConnection: 在事件循环回到接收者线程后执行槽函数，槽函数与信号在不同的线程。
+   + Qt::BlockingQueuedConnection: 与Qt::QueuedConnection相似，只是信号线程会阻塞直到槽函数执行完毕。当信号与槽函数在同一个线程时绝对不能使用这种方式，否则会造成死锁。
+  2. 使用sender()获得信号发射者
+     + 在槽函数里，使用QObject::sender()可以获取信号发射者的指针。如果知道信号发射者的类型，可以将指针投射为确定的类型，然后使用这个确定类的接口函数。
+  3. 自定义信号及其使用
+     + 在自己设计的类里也可以自定义信号，**信号就是在类定义里声明的一个函数，但是这个函数无需实现，只需要发射(emit)**  
+     + 例如，在下面的自定义类QPerson的signals部分定义一个信号ageChanged(int)
+```cpp
+class QPerson : public QObject
+{
+  Q_OBJECT
+private:
+  int m_age = 10;
+public:
+  void incAge();
+signals:
+  void ageChanged(int value);
+}
+```
+   + 信号函数必须是无返回值的函数，但是可以有输入参数。信号函数无需实现，只需在某些条件下发射信号。例如，在incAge()函数中发射信号，其代码如下
+```cpp
+void QPerson::incAge()
+{
+  m_age++;
+  emit ageChanged(m_age); // 发射信号
+}
+```
+   + 在incAge()函数里，当私有变量m_age变化后，发射信号ageChanged(int)，表示年龄发生了变化。至于是否有此信号相关联的槽函数，信号发射者并不管。如果在使用QPerson类对象的程序中为此信号关联了槽函数，在incAge()函数里发射此信号时，就会执行相关联的槽函数。至于是否立即执行槽函数，发射信号的线程是否等待槽函数执行完之后再执行后面的代码，与connect()函数设置信号与槽关联时设置的连接类型以及信号与槽是否在同一个线程有关。
+
+### 3.2 Qt全局定义
+
++ <QtGlobal>头文件包含了Qt类库的一些全局定义，包括基本数据类型，函数和宏，一般的Qt类的头文件都会包含该文件，所以不用显示包含这个头文件也可以使用其中的定义。
+
+#### 3.2.1 数据类型定义
+
++ 为了确保在各个平台上各数据类型都有统一确定的长度，Qt为各种常见数据类型定义了类型符号，例如qint8就是signed char的类型定义，即 typedef signed char qint8;
+
+#### 3.2.2 函数
+
++ <QtGlobal>头文件包含一些常用函数的定义，这些函数多以模板类型作为参数，返回相应的模板类型，模板类型可以用任何其他类型替换。若是以double或float类型作为参数的，一般有两个参数版本的额同名函数，例如qFuzzyIsNull(double d)和qFuzzyIsNull(float f)。
++ 还有一些基础的数学运算函数在<QtMath>头文件中定义，例如三角运算函数，弧度与角度之间的转换函数等。
+
+#### 3.2.3 宏定义
+
++ <QtGlobal>头文件中定义了很多宏，以下是一些比较常用的
+
++ QT_VERSION
+  + 这个宏展开为数值形式0xMMNNPP(MM = major, NN = minor, PP = patch)表示Qt编译器版本，例如Qt编译器版本为Qt 5.9.1，则QT_VERSION为0x050901。这个宏常用于条件编译设置，根据Qt版本不同，编译不同的代码段。
+```cpp
+#if QT_VERSION >= 0x040100
+  QIcon icon = style()->standardIcon(QStyle::SP_TrashIcon);
+#else
+  QPixmap pixmap = style()->standardPixmap(QStyle::SP_TrashIcon);
+  QIcon icon(pixmap);
+#endif
+```
+
++ QT_VERSION_CHECK
+  + 这个宏展开为Qt版本号的一个整数表示，例如
+```cpp
+#if (QT_VERSION >= QT_VERSION_CHECK(5, 0, 0))
+#include <QtWidgets>
+#else
+#include <QtGui>
+#endif
+```
+
++ QT_VERSION_STR
+  + 这个宏展开为Qt版本号的字符串，例如 "5.9.0"
+
++ Q_BYTE_ORDER, Q_BIG_ENDIAN 和 Q_LITTLE_ENDIAN
+  + Q_BYTE_ORDER 表示系统内存中数据的字节序，
+  + Q_BIG_ENDIAN 表示大端字节序
+  + Q_LITTLE_ENDIAN 表示小端字节序。
+  + 在需要判断系统字节序时会用到，例如
+```cpp
+#if Q_BYTE_ORDER == Q_LITTLE_ENDIAN
+...
+#endif
+``` 
+
++ Q_DECL_IMPORT, Q_DECL_EXPORT
+  + 在使用或设计共享库时，用于导入或到处库的内容
+
++ Q_DECL_OVERRIDE
+  + 在类定义中，用于重载一个虚函数，例如在某个类中重载虚函数paintEvent(),可以定义如下
+```cpp
+void paintEvent(QPaintEvent*) Q_DECL_OVERRIDE;
+```
+  + 使用Q_DECL_OVERRIDE宏后，如果重载的虚函数没有进行任何重载操作，编译器将会报错。
+
++ Q_DECL_FINAL
+  + 这个宏将一个虚函数定义为最终级别，不能再被重载，或定义一个类不能再被继承，实例如下
+```cpp
+class QRect Q_DECL_FINAL {  // QRect不能再被继承
+  // ...
+};
+```
+
++ Q_UNUSED(name)
+  + 这个宏用于在函数中定义不在函数体里使用的参数，示例如下
+```cpp
+void MainWindow::on_imageSaved(int id, const QString &filename)
+{
+  Q_UNUSED(id);
+  LabInfo->setText("图片保存为: " + filename);
+}
+```
+  + 在这个函数里，id参数没有使用。如果不用Q_UNUSED(id)定义，编译器会出现参数未使用的警告。
+
++ foreach(variable, container)
+  + foreach用于容器类的遍历，例如
+```cpp
+foreach (const QString &codecName, recorder->supportedAudioCodecs())
+  ui->comboCodec->addItem(codecName);
+```
+
++ forever
+  + forever用于构造一个无限循环，例如
+```cpp
+forever {
+  ...
+}
+```
+
++ qDebug(const char *message, ...)
+  + 在debugger窗体显示信息，如果编译器设置了 Qt_NO_DEBUG_OUTPUT，则不作任何输出，例如
+```cpp
+qDebug("Item in list: %d", myList.size());
+```
++ 类似的宏还有 qWarning, qCritical, qFatal, qInfo等，也是用于在debugger窗体显示信息。
+
+### 3.3 容器类
+
+#### 3.3.1 容器类概述
+
++ Qt提供了多个基于模板的容器类，这些容器类可以用于存储指定类型的数据项，例如常用的字符串列表类QStringList就是从容器类QList<QString>继承的，实现对字符串列表的添加，存储，删除等操作。
++ Qt的容器壁标准模板库(STL)中的容器类更轻巧，安全和易于使用。这些容器类是隐式共享和可重入的，而且他们进行了速度和存储优化，因此可以减少可执行文件的大小。此外，它们还是线程安全的，也就是说**它们作为只读容器时可以被多个线程访问**。
+
++ 容器类是基于模板的类，如常用的容器类QList<T>，T是一个具体的类型，可以是int, float等简单的类型，也可以是QString, QDate等类，但是不能是QObject或任何其子类。T必须是一个可赋值的类型，即T必须提供一个缺省的构造函数，一个可复制构造函数和一个赋值运算符。
++ Qt的容器类分为顺序容器(sequential containers)和关联容器(associative containers)
++ 容器迭代类用于遍历容器里的数据项，有Java类型的迭代类和STL类型的迭代类。Java类型的迭代类易于使用，提供高级功能，而STL类型的迭代类效率更高一些。
++ Qt还提供了foreach宏用于遍历容器内的所有数据项。
+
+#### 3.3.2 顺序容器类
+
++ Qt的顺序容器类有 QList, QLinkedList, QVector, QStack和QQueue
+
++ QList
+  + QList是最常用的容器类，虽然它是以数组列表(array-list)的形式实现的，但是在其前或后添加数据非常快。QList以下标索引的方式对数据项进行访问。
+
++ QLinkedList
+  + QLinkedList<T>是链式列表(linked-list),数据项不是用连续的内存存储的，它基于迭代器访问数据项，并且插入和删除数据项的操作时间相同。
+  除了不提供基于下标索引的数据项访问外，QLinkedList的其他接口函数与QList基本相同。
+
++ QVector
+  + QVector<T>提供动态数组的功能，以下标索引访问数据。
+  + QVector的函数接口与QList几乎完全相同，QVector<T>的性能比QList<T>更高，因为QVector<T>的数据项是连续存储的。
+
++ QStack
+  + QStack<T>是提供类似于堆栈的后入先出(LIFO)操作的容器类，push()和pop()是主要的接口函数。
+
++ QQueue
+  + QQueue<T>是提供类似于队列先入先出(FIFO)操作的容器类。enqueue()和dequeue()是主要的操作函数
+
+#### 3.3.3 关联容器类
+
++ Qt还提供关联容器类 QMap, QMultiMap, QHash, QMultiHash和QSet
++ QMultiMap和QMultiHash支持一个键关联多个值，QHash和QMultiHash类使用散列(Hash)函数进行查找，查找速度较快
+
++ QSet
+  + QSet是基于散列列表的集合模板类，它存储数据的顺序是不定的，查找值的速度非常快。QSet<T>内部就是用QHash实现的。
+  + 测试一个值是否包含于这个集合，用contains()函数
+
++ QMap
+  + QMap<Key, T>提供一个字典(关联数组)，一个键映射到一个值。QMap存储数据是按照键的顺序，如果不在乎存储顺序，使用QHash会更快
+
++ QMultiMap
+  + QMultiMap是QMap的子类，是用于处理多值映射的便利类
+
++ QHash
+  + QHash是基于散列表来实现字典功能的模板类，QHash<Key, T>存储的键值对具有非常快的查找速度。
+
++ QHash与QMap的功能和用法相似，区别在于以下几点
+  + QHash比QMap的查找速度更快
+  + 在QMap上遍历时，数据项是按照键排序的，而QHash的数据项是任意顺序的
+  + QMap的键必须提供 "<" 运算符，QHash的键必须提供 "==" 运算符和一个名称为 qHash() 的全局散列函数
+
++ QMultiHash
+  + QMultiHash是QHash的子类，是哟弄个与处理多值映射的便利类，其用法与QMultiMap类似
+
+### 3.4 容器类的迭代
+
++ 迭代器(iterator)为访问容器类里的数据项提供了统一的方法，Qt有两种迭代器类: Java类型的迭代器和STL类型的迭代器
++ Java类型的迭代器更易于使用，且提供一些高级功能，而STL类型的迭代器效率更高。
+
+#### 3.4.1 Java类型迭代器
+
+#### 3.4.2 STL类型迭代器
+
++ STL迭代器与Qt和STL的原生算法兼容，并且进行了速度优化
++ 对于每一个容器类，都有两个STL类型迭代器：一个用于只读访问，一个用于读写访问。无需修改数据时一定使用只读迭代器，因为它们速度更快。
+
++ STL类型的迭代器是数组的指针，所以 "++" 运算符使迭代器指向下一个数据项， "*"运算符返回数据项内容。
+
++ 隐式共享(Implicit Sharing)是对象的管理方法，一个对象被隐式共享，只是传递该对象的一个指针给使用者，而不实际复制对象数据，只有在使用者修改数据时，才实质复制共享对象给使用者。
++ 对于STL类型的容器，隐式共享还涉及到另外一个问题，即当有一个迭代器在操作一个容器变量时，不要去复制这个容器变量。
+
+#### 3.4.3 foreach关键字
+
++ 如果只是想遍历容器中所有的项，可以使用foreach关键字。foreach是<QtGlobal>头文件中定义的一个宏。
++ **foreach关键字遍历一个容器变量是创建了容器的一个副本，所以不能修改原来容器变量的数据项**。
+
+### 3.5 Qt类库的模块
+
++ Qt类库里大量的类根据功能分为各种模块，这些模块又分为几大类
+  + Qt基本模块(Qt Essentials): 提供了Qt在所有平台上的基本功能
+  + Qt附加模块(Qt Add-Ons): 实现一些特定功能的提供附加价值的模块
+  + 增值模块(Value-Add Modules): 单独发布的提供额外价值的模块或工具
+  + 技术预览模块(Technology Preview Modules): 一些处于开发阶段，但是可以作为技术预览使用的模块
+  + Qt工具(Qt Tools): 帮助应用程序开发的一些工具。
+
+#### 3.5.1 Qt基本模块
+
++ Qt基本模块是Qt在所有平台上的基本功能，它们在所有的开发平台和目标平台上都可用，在Qt5所有版本上是源代码和二进制兼容的。具体的基本模块如下
+  + Qt Core: 其他模块都用到的核心非图形类
+  + Qt GUI: 设计GUI界面的基础类，包括OpenGL
+  + Qt Multimedia: 音频，视频，摄像头和广播功能的类
+  + Qt Multimedia Widgets: 实现多媒体功能的界面组件类
+  + Qt Network: 使网路编程更简单和轻便的类
+  + Qt QML: 用于QML和JavaScript语言的类
+  + Qt Quick: 用于构建具有定制用户界面的动态应用程序的声明框架
+  + Qt Quick Controls: 创建桌面样式用户界面，基于Qt Quick的用户界面控件
+  + Qt Quick Dialogs: 用于Qt Quick的系统对话框类型
+  + Qt Quick Layouts: 用于Qt Quick 2界面元素的布局项
+  + Qt SQL: 使用SQL用于数据库操作的类
+  + Qt Test: 用于应用程序和库进行单元测试的类
+  + Qt Widgets: 用于构建GUI界面的C++图形组件类
+
+#### 3.5.2 Qt附加模块
+
+#### 3.5.3 增值模块
+
+#### 3.5.4 技术预览模块
+
+#### 4.5.5 Qt 工具
+
++ Qt工具在所有支持的平台上都可以使用，用于帮助应用程序的开发和设计
+  + Qt Designer: 用于扩展Qt Designer的类
+  + Qt Help: 在应用程序中集成在线文档的类，实现类似于Qt Assistant的功能
+  + Qt UI Tools: 操作Qt Designer生成的窗体的类
+
+## 第四章 常用界面设计组件
+
+## 第五章 Model/View结构
+
++ Model/View(模型/视图)结构是Qt中用界面组件显示与编辑数据结构的一种结构，视图(View)是显示和编辑数据的界面组件，模型(Model)是视图与原始数据之间的接口。Model/View结构的典型应用是在是数据库应用程序中。
++ 主要的视图组件有 QListVew, QTreeView和QTableView
+
+## 第六章 对话框与多窗体设计
+
++ 在一个完整的应用程序设计中，不可避免地会涉及多个窗体，对话框的设计和调用，如何设计和调用这些对话框和窗体是搞清楚一个庞大的应用程序设计的基础。本章将介绍对话框和多窗体设计，调用方式，数据传递等问题，主要包括以下几点
+  + Qt 提供的标准对话框的使用，例如打开文件对话框，选择颜色对话框，字体对话框，消息提示和确认选择对话框等
+  + 自定义对话框的设计和调用，如何获取返回值，在对话框中如何操作主窗体等
+  + 在一个应用程序中如何设计多种窗体，基于QDialog,QWidget和QMainWindow创建的窗体的调用方式有哪些，它们之间有什么区别
+  + 如何创建一个在多页组件中管理的多窗体应用，类似于现在流行的多页浏览器的界面效果，子窗体如何与主窗体实现交互
+  + 如何创建MDI(Multi-document interface)应用程序
+  + 如何创建一个带有启动界面(Splash)和登录界面的窗体，如何保存和读取应用程序设置的参数。
+
+## 第七章 文件系统和文件读写
+
++ 文件的读写是很多程序具有的功能，甚至某些应用程序就是围绕着某一种格式文件的处理而开发的，所以文件读写是应用程序开发的一个基本功能。
++ 本章介绍Qt中如何实现文本文件，二进制文件的读写，以及文件和目录的管理功能。
+
+## 第八章 绘图
+
++ GUI用户界面的优势是通过可视化的界面元素为用户提供遍历的操作，界面上的按钮，编辑框等各种界面组件其实都是通过绘图而得到的。Qt的二维绘图基本功能是使用QPainter在绘图设备上绘图，绘图设备包括QWidget,QPixmap等，通过绘制一些基本的点，线，圆等基本形状组成自己需要的图形，得到的图形是不可交互操作的图形。
++ Qt还提供了Graphics View架构，使用GraphicsView, QGraphicsScene和各种QGraphicsItem类绘图，在一个场景中可以绘制大量图件，且每个图件是可选择，可交互的，如同矢量图编辑软件那样可以操作每个图件。Graphics View架构为用户绘制复杂的组件化图形提供了便利。
+
+## 第九章 Qt Charts
+
++ Qt Charts是Qt提供的图表模块，在Qt 5.7以前只有商业版才有Qt Charts，但是从Qt 5.7开始，社区版本也包含了Qt Charts。Qt Charts可以很方便的绘制常见的折线图，柱状图，饼图等图表。
+
+## 第十章 Data Visualization
+
++ Data Visualization是Qt提供的用于数据三维显示的模块。在Qt 5.7以前只有商业版才有Qt Visualization，但是从Qt 5.7开始，社区版本也包含了Qt Visualization
++ Data Visualization用于数据的三维显示，包括三维柱状图，三维空间散点，三维曲面等。
+
+## 第十一章 数据库
+
++ Qt SQL模块提供数据库编程的支持，Qt支持多种常见的数据库，例如 MySQL, Oracle, MS SQL Server, SQlite等。Qt SQL模块包括多个类，可以实现数据库连接，SQL语句执行，数据获取与界面显示等功能，数据与界面之间使用Model/View架构，从而可以方便的实现数据的界面显示和操作。
+
+## 第十二章 自定义插件和库
+
++ 当UI设计器提供的界面组件不满足实际需求时，可以从QWidget继承自定义界面组件。有两种方法使用自定义界面组件，一种是提升发(promotion)；另一种是为UI设计器设计自定义界面组件的Widget插件，直接安装到UI设计器的组件面板里。
+
+## 第十三章 多线程
+
++ Qt为多线程提供了完整的支持。QThread是线程类，是实现多线程操作的核心类，一般从QThread继承定义自己的线程类。线程之间的同步是其交互的主要问题，Qt提供了QMutex，QMutexLocker,QReadWriteLock,QwaitCondition,QSemaphore等多种类用于实现线程之间的同步。Qt还有Qt Concurrent模块，提供一些高级的API实现多线程编程而无需使用QMutex, QwaitCondition和QSemaphore等基础操作。使用Qt Concurrent实现的多线程程序可以自动根据处理器内核个数调整线程个数。
++ 本章主要介绍用QThread实现多线程编程的方法，以及用QMutex，QWaitCondition,QSemaphore等实现线程同步的方法。
+
+### 13.1 QThread创建多线程程序
+
+#### 13.1.1 QThread类功能简介
+
++ QThread类提供不依赖于平台的管理线程的方法。一个QThread类的对象管理一个线程，一般从QThread继承一个自定义类，并重定义虚函数run()，在run()函数里实现线程需要完成的任务。
++ 将应用程序的线程称为主线程，额外创建的线程称为工作线程。一般在主线程里创建工作线程，并调用start()开始执行工作线程的任务。start()会在内部调用run()函数，进入工作线程的事件循环，在run()函数里调用exit()或quit()可以结束线程的事件循环，或者在主线程里调用terminate()强制结束线程。
+
++ QThread类的主要接口函数，信号和槽函数如下
+  + 公共函数
+    + bool isFinished(): 线程是否结束
+    + bool isRunning(): 线程是否正在运行
+    + Priority priority(): 返回线程的优先级
+    + void setPriority(Priority priority): 设置线程的优先级
+    + void exit(int returnCode = 0): 退出线程的事件循环，退出码为 returnCode，0表示成功退出，否则表示有错误
+    + bool wait(unsigned long time): 阻止线程执行，直到线程结束(从run()函数返回)，或等待时间超过time(毫秒)
+  + 公共槽函数
+    + void quit(): 退出线程的事件循环，并返回代码0，等效于exit(0)
+    + void start(Priority priority): 内部调用run()开始执行线程，操作系统根据priority参数进行调度
+    + void terminate(): 终止线程的运行，但不是立即结束线程，而是等待操作系统结束线程。使用terminate()之后应使用wait()
+  + 信号
+    + void finished(): 在线程就要结束时发射此信号
+    + void started(): 在线程开始执行，run()函数被调用之前发射此信号
+  + 静态公共成员
+    + int idelThreadCount(): 返回系统上能够运行的线程的理想个数
+    + void msleep(unsigned long msecs): 强制当前线程休眠msecs毫秒
+    + void sleep(unsigned long secs): 强制当前线程休眠secs秒
+    + void usleep(unsigned long usecs): 强制当前线程休眠usecs微妙
+  + 保护函数
+    + virtual void run(): start()调用run()函数开始线程任务的执行，所以在run()函数里实现线程的任务功能
+    + int exec(): 由run()函数调用，进入此线程的事件循环，等待exit()退出。
+
++ QThread是QObject的子类，所以可以使用信号和槽机制。QThread自身定义了started()和finished()两个信号，started()信号在线程开始执行之前发射，也就是在run()函数被调用之前，finished()信号在线程就要结束时发射。
+
+### 13.2 线程同步
+
+#### 13.2.1 线程同步的概念
+
++ 在多线程应用程序中，由于多个线程的存在，线程之间可能需要访问同一个变量，或一个线程需要等待另外一个线程完成某个操作后才产生相应的动作。
+
+#### 13.2.2 基于互斥量的线程同步
+
++ QMutex和QMutexLocker是基于互斥量的线程同步类，QMutex定义的实例是一个互斥量，QMutex主要提供3个函数
+  + lock(): 锁定互斥量，如果另外一个线程锁定了这个互斥量，它将阻塞执行直到其他线程解锁这个互斥量。
+  + unlock(): 解锁一个互斥量，需要与lock()配对使用
+  + tryLock(): 试图锁定一个互斥量，如果成功锁定就返回true；如果其他线程已经锁定了这个互斥量，就返回false，但不阻塞程序执行。
+
++ 定义的互斥量mutex相当于一个标牌，可以这样来理解互斥量: 列车上的卫生间一次智能进一个人，当一个人尝试进入卫生间就是lock()，如果有人占用，它就只能等待；等里面的人出来，腾出了卫生间是unlock()，这个等待的人才可以进入并且锁住卫生间的门，就是lock()，使用完卫生间之后他再出来时就是unlock()
+
++ QMutex需要
