--- a/Windows/2024-05-22-windows_03_常用技巧.md
+++ b/Windows/2024-05-22-windows_03_常用技巧.md
@@ -10,6 +10,26 @@ last_modified_date: 2024-06-29 11:00:00 +0800
 
 + windows系统下常用技巧
 
+## windows 查看文件被占用的线程
+
+在 Windows 中，你可以使用以下方法来查看被占用文件的线程：
+
+### 方法一：使用 **Resource Monitor**
+1. 按下 `Ctrl + Shift + Esc` 打开任务管理器。
+2. 在任务管理器中，切换到 **“性能”** 标签页，然后点击 **“打开资源监视器”**。
+3. 在资源监视器中，切换到 **“CPU”** 标签页。
+4. 在 **“关联的句柄”** 搜索框中输入被占用的文件名，资源监视器会显示与该文件相关的进程。
+
+### 方法二：使用 **Process Explorer**
+Process Explorer 是微软提供的高级工具，可以用于查看文件被哪个进程或线程占用。
+
+1. 下载并运行 [Process Explorer](https://learn.microsoft.com/en-us/sysinternals/downloads/process-explorer)。
+2. 在工具栏中点击 **“Find”**，选择 **“Find Handle or DLL”**，或者直接按 `Ctrl + F`。
+3. 输入文件名，然后点击 **“Search”**。搜索结果会显示与该文件相关的进程。
+4. 你可以双击进程名称查看详细信息，包括线程信息。
+
+这些方法可以帮助你定位具体的线程或进程占用了文件。
+
 ## windows 10 系统激活
 
 + 命令如下
