--- a/Books/2024-08-23-QtC++开发指南.md
+++ b/Books/2024-08-23-QtC++开发指南.md
@@ -595,4 +595,31 @@ qDebug("Item in list: %d", myList.size());
 
 + 定义的互斥量mutex相当于一个标牌，可以这样来理解互斥量: 列车上的卫生间一次智能进一个人，当一个人尝试进入卫生间就是lock()，如果有人占用，它就只能等待；等里面的人出来，腾出了卫生间是unlock()，这个等待的人才可以进入并且锁住卫生间的门，就是lock()，使用完卫生间之后他再出来时就是unlock()
 
-+ QMutex需要
++ QMutex需要配对使用lock()和unlock()来实现代码段的保护，在一些逻辑复杂的代码段或可能发生一场的代码中，配对就可能出错。
++ QMutexLocker是另外一个简化了互斥量处理的类。QMutexLocker的构造函数接受一个互斥量作为参数并将其锁定，QMutexLocker的析构函数则将此互斥量解锁，所以在QMutexLocker实例变量的生存期内的代码段得到保护，自动进行互斥量的锁定和解锁。(与C++的自动锁原理一样，构造函数锁住互斥量，析构函数释放互斥量)
+
+#### 13.2.3 基于QReadWriteLock的线程同步
+
++ 使用互斥量时存在一个问题: 每次只能有一个线程获得互斥量的权限。如果在一个程序中有多个线程读取某个变量，使用互斥量时也需要排队。而实际上若只是读取一个变量，是可以让多个线程同时访问的，这样互斥量就会降低程序的性能。
++ Qt提供了QReadWriteLock类，它是基于读或写的模式进行代码段锁定的，在多个线程读写一个共享数据时，可以解决上面所说的互斥量存在的问题。
+  
++ QReadWriteLock以读或写锁定的同步方法允许以读或写的方式保护一段代码，它可以允许多个线程以只读方式同步访问资源，但是只要有一个线程以写方式访问资源，其他线程必须等待直到写操作结束。
++ QReadWriteLock提供一下几个主要的函数
+  + lockForRead(): 以只读方式锁定资源，如果有其他线程以写入方式锁定，这个函数会阻塞
+  + lockForWrite(): 以写入方式锁定资源，如果本线程或其他线程以读或写模式锁定资源，这个函数就会阻塞。
+  + unlock(): 解锁
+  + tryLockForRead():  是lockForRead()的非阻塞版本
+  + tryLockForWrite(): 是lockForRead()的非阻塞版本
+
++ QReadLocker和QWriteLocker是QReadWriteLock的简便形式，如同QMutexLocker是QMutex的简便版本一样，无需与unlock()配对使用。使用QReadLocker和QWriterLocker。
+
+#### 13.2.4 基于QWaitCondition的线程同步
+
++ 在多线程的程序中，多个线程之间的同步实际上就是他们之间的协调问题。前面采用的互斥量和基于QReadWriteLock的方法都是对资源的锁定和解锁，避免同时访问资源时发生冲突。在一个线程解锁资源后，不能及时通知其他线程。
++ QWaitCondition提供了另外一种改进的线程同步方法，QWaitCondition与QMutex结合，可以使一个线程在满足一定条件时通知其他多个线程，使他们及时做出响应，这样比只使用互斥量效率更高一些。
+
++ QWaitCondition提供如下一些函数
+  + wait(Qmutex *lockedMutex): 解锁互斥量lockedMutex，并阻塞等待唤醒条件，被唤醒后锁定lockedMutex并退出函数
+  + wakeAll(): 唤醒所有处于等待状态的线程，线程唤醒的顺序不确定，由操作系统的调度策略决定
+  + wakeOne(): 唤醒一个处于等待状态的线程，唤醒哪个线程不确定，由操作系统的调度策略决定
++ QWaitCondition一般用于 "生产者/消费者(producer/consumer)"模型中。
