--- a/Windows/2024-05-22-windows_03_常用技巧.md
+++ b/Windows/2024-05-22-windows_03_常用技巧.md
@@ -10,6 +10,15 @@ last_modified_date: 2024-06-29 11:00:00 +0800
 
 + windows系统下常用技巧
 
+## 笔记本电脑屏幕当作扩展屏幕
+
++ 目标: 根据win10自带功能，将一台PC给另一台PC当扩展屏
+
++ 在设置里打开 可被发现功能
+  + 如果没有打开，在 添加应用 处添加 无线显示器就可以
++ 主机打开投影/连接，点击 连接到无线显示器，选择新发现的设备
++ 在投影选项中选择扩展。
+
 ## windows 查看文件被占用的线程
 
 在 Windows 中，你可以使用以下方法来查看被占用文件的线程：
