--- a/Personal/2024-07-23-2024年工作笔记.md
+++ b/Personal/2024-07-23-2024年工作笔记.md
@@ -1750,3 +1750,25 @@ last_modified_date: 2024-07-30 10:00:00 +0800
      + VisionInterface
      + CTask
   3. 其次根据软件开发说明文档格式要求，完成文档编制
+
++ 08.22
+  + 碰钉机器人软件说明书文档编写
+
++ 08.23
+  + 碰钉机器人软件说明书文档编写 [done]
+  + Qt开发指南 阅读
+
++ 08.24
+  + Qt开发指南 阅读
+
++ 08.25
+  + Qt开发指南 阅读
+
++ 08.26
+  + 工作 -- 状态机
+    + 状态定义
+      + 驼峰命名法
+    + 状态结构搭建
+      + switch()分支结构
+  + 自我提升
+    + Qt开发指南 阅读
