完成Qt第一本书记的学习

--- a/Books/2024-08-23-QtC++开发指南.md
+++ b/Books/2024-08-23-QtC++开发指南.md
@@ -623,3 +623,62 @@ qDebug("Item in list: %d", myList.size());
   + wakeAll(): 唤醒所有处于等待状态的线程，线程唤醒的顺序不确定，由操作系统的调度策略决定
   + wakeOne(): 唤醒一个处于等待状态的线程，唤醒哪个线程不确定，由操作系统的调度策略决定
 + QWaitCondition一般用于 "生产者/消费者(producer/consumer)"模型中。
+
+#### 13.2.5 基于信号量的线程同步
+
++ 信号量(Semaphore)是另一种限制对共享资源进行访问的线程同步机制，它与互斥量(Mutex)相似，但是有区别。一个互斥量只能被锁定依次，而信号量可以多次使用。信号量通常用来保护一定数量的相同的资源，例如数据采集时的双缓冲区。
+
++ QSemaphore是实现信号量功能的类，它提供以下几个基本的函数
+  + acquire(int n): 尝试获得n个资源。如果没有这么多资源，线程将阻塞直到有n个资源可用
+  + release(int n): 释放n个资源，如果信号量的资源已全部可用之后再release()，就可以创建更多的资源，增加可用资源的个数
+  + int available(): 返回当前信号量可用的资源个数，这个个数永远不可能为负数，如果为0，就说明当前没有资源可用
+  + bool tryAcquire(int n = 1): 尝试获取n个资源，不成功时不阻塞线程。
++ 在定义QSemaphore的实例时，可以传递一个数值作为初始可用的资源个数。
+
+## 第十四章 网络编程
+
++ Qt网络模块提供了用于编写TCP/IP客户端和服务端程序的各种类，例如用于TCP通信的QTcpSocket和QTcpServer，用于UDP通信的QudpSocket，还有用于实现HTTp，FTP等普通网络协议的高级类，例如QNetworkRequest，QNetworkReply和QNetworkAccessManager。
+
+### 14.1 主机信息查询
+
+#### 14.1.1 QHostInfo 和 QNetworkInterface 类
+
++ 查询一个主机的MAC地址或IP地址是网络应用程序中经常用到的功能。
+
++ QHostInfo的静态函数 localHostName() 可获取本机的主机名，静态函数 fromName() 可以通过主机名获取IP地址，静态函数 lookupHost() 可以通过一个主机名，以异步方式查找这个主机的IP地址。
++ QNetworkInterface 可以获得运行应用程序的主机的所有IP地址和网络接口列表。静态函数 allInterfaces() 返回主机上所有的网络接口的列表，一个网络接口可能包括多个的IP地址，每个IP地址与掩码或广播地址关联。如果无需直到子网掩码和广播的IP地址，使用静态函数 allAddresses() 可以获得主机上的所有IP地址列表。
+
+### 14.2 TCP通信
+
+#### 14.2.1 TCP通信概述
+
++ TCP(Transmission Control Protocol)是一种被大多数Internet网络协议(例如HTTP和FTP)用于数据传输的低级网络协议，它是可靠的，面向流，面向连接的传输协议，特别适合用于连续数据传输。
+
+### 14.3 QUdpSocket 实现 UDP通信
+
+#### 14.3.1 UDP通信概述
+
++ UDP(User Datagram Protocol，用户数据包协议)是轻量的，不可靠的，面向数据报(datagram)，无连接的协议，它可以用于对可靠性要求不高的场合。与TCP通信不同，两个程序之间进行UDP通信无需预先建立持久的socket连接，UDP每次发送数据报都需要指定目标地址和端口。
++ UDP消息传送有单播，广播，组播三种模式
+  + 单播(unicast)模式: 一个UDP客户端发出的数据包只发送到另一个指定地址和端口的UDP客户端，是一对一的数据传输
+  + 广播(broadcast)模式：一个UDP客户端发出的数据包，在同一个网络范围内其他所有的UDP客户端都可以收到。
+  + 组播(multicast)模式: 也称多播。UDP客户端加入到另一个组播IP地址指定的多播组，成员向组播地址发送的数据包组内成员都可以接收到。
++ 使用广播和多播模式，UDP可以实现一些比较灵活的通信功能，而TCP通信只有单播模式，没有广播和多播模式。所以UDP通信虽然不能保证数据传输的准确性，但是具有灵活性，一般的即时通信软件都是基于UDP通信的。
+
+### 14.4 基于HTTP协议的网络应用程序
+
+#### 14.4.1 实现高层网络操作的类
+
++ Qt网络模块提供一些类实现OSI七层网络模型中高层的网络协议，例如HTTP，FTP，SNMP等，这些类主要是QNetworkRequest, QNetworkReply和QNetowrkAccessManager
+
+## 第十五章 多媒体
+
++ 多媒体功能指的主要是计算机的音频和视频的输入，输出，显示和播放等功能，Qt的多媒体模块为音频和视频播放，录音，摄像头拍照和录像等提供支持，甚至还提供数字收音机的支持。
+
+### 15.1 Qt多媒体模块功能概述
+
++ 利用Qt多媒体模块提供的各种类，可以实现一般的音频，视频的输入和输出。
+
+## 第十六章 应用程序设计辅助功能
+
++ 本章介绍Qt应用程序设计的一些辅助功能，包括设计多语言界面，使用样式表定制界面和组件的外观，使用QStyle设置界面外观，以及应用程序发布等。
