--- a/Personal/2024-07-23-2024年工作笔记.md
+++ b/Personal/2024-07-23-2024年工作笔记.md
@@ -1772,3 +1772,9 @@ last_modified_date: 2024-07-30 10:00:00 +0800
       + switch()分支结构
   + 自我提升
     + Qt开发指南 阅读
+
++ 08.27
+  + 工作 -- 状态机
+    + 完成理想情况下流程的编写 [done]
+    + 不理想情况下流程的编写
+    + 类的表达方式改为函数
