--- a/Personal/2024-07-23-2024年工作笔记.md
+++ b/Personal/2024-07-23-2024年工作笔记.md
@@ -1778,3 +1778,9 @@ last_modified_date: 2024-07-30 10:00:00 +0800
     + 完成理想情况下流程的编写 [done]
     + 不理想情况下流程的编写
     + 类的表达方式改为函数
+
++ 08.28
+  + 工作 -- 状态机
+    + 不理想情况下流程的编写 [done]
+    + 类的表达方式改为函数 [done]
+    + 流程整合 [doing]
