--- a/C++/C++_99_其他/2024-05-22-C++常见错误.md
+++ b/C++/C++_99_其他/2024-05-22-C++常见错误.md
@@ -9,6 +9,12 @@ tag: CppOthers
 
 + C/C++程序编译或者运行常见错误
 
+## warning C4819: 该文件包含不能在当前代码页(936)中表示的字符。请将该文件保存为 Unicode 格式以防止数据丢失
+
++ 使用vs编译时遇到这个错误,正常情况下写的文件是没有问题的，只要用其它编辑器修改过后再保存,再用vs编译就会出现这个问题。
++ 解决方法
+  + 在VS IDE中将文件另存为，在保存中选择高级保存选项，选择 Unicode (UTF-8 带签名) - 代码页65001
+
 ## C++ to ‘const std::mutex’ discards qualifiers 错误
 
 这个错误通常是因为你在尝试将一个非 const 的 `std::mutex` 对象赋值给一个 `const std::mutex` 对象，或者你在一个 const 成员函数中尝试对一个非 const 的 `std::mutex` 对象进行操作。这违反了 C++ 的 const-correctness 原则，即 const 对象只能调用 const 成员函数，并且不能被修改。
