--- a/Personal/2024-07-23-2024年工作笔记.md
+++ b/Personal/2024-07-23-2024年工作笔记.md
@@ -1783,4 +1783,6 @@ last_modified_date: 2024-07-30 10:00:00 +0800
   + 工作 -- 状态机
     + 不理想情况下流程的编写 [done]
     + 类的表达方式改为函数 [done]
-    + 流程整合 [doing]
+    + 流程整合 [done]
+    + 遥控器数据结构定义 [doing]
+    + 遥控器数据处理流程编写
