--- a/Windows/2024-05-22-windows_03_常用技巧.md
+++ b/Windows/2024-05-22-windows_03_常用技巧.md
@@ -10,6 +10,52 @@ last_modified_date: 2024-06-29 11:00:00 +0800
 
 + windows系统下常用技巧
 
+## windows11 查看系统日志的方法
+
+在 Windows 11 中查看系统日志的方法如下：
+
+### 1. 使用“事件查看器”查看系统日志
+
+1. **打开事件查看器**:
+   - 按 `Win + S` 键打开搜索框。
+   - 输入“事件查看器”或“Event Viewer”，然后按回车。
+
+2. **导航到系统日志**:
+   - 在左侧窗格中，展开“Windows 日志”。
+   - 选择“系统”，这里会显示与系统相关的日志。
+
+3. **查看日志**:
+   - 在中央窗格中，你会看到系统日志的详细列表。可以点击任意条目查看具体的事件信息。
+   - 你也可以使用右侧的“操作”面板中的“筛选当前日志”功能来缩小搜索范围，查找特定事件。
+
+### 2. 使用 PowerShell 查看系统日志
+
+1. **打开 PowerShell**:
+   - 按 `Win + X`，选择“Windows Terminal（管理员）”或“PowerShell（管理员）”。
+
+2. **运行命令查看系统日志**:
+   - 输入以下命令查看系统日志：
+     ```powershell
+     Get-EventLog -LogName System
+     ```
+   - 你可以通过添加参数来过滤或格式化输出，例如：
+     ```powershell
+     Get-EventLog -LogName System -Newest 10
+     ```
+     这将显示最新的 10 条系统日志。
+
+### 3. 使用“设置”应用查看系统日志
+
+虽然“设置”应用本身不直接显示系统日志，但你可以查看一些系统状态信息：
+
+1. **打开设置**:
+   - 按 `Win + I` 打开设置。
+
+2. **查看系统状态**:
+   - 选择“系统”>“故障排除”>“其他故障排除器”，查看一些常见问题和解决方案。
+
+这些方法可以帮助你访问和分析 Windows 11 系统日志，排查系统问题或监控系统健康状态。
+
 ## 笔记本电脑屏幕当作扩展屏幕
 
 + 目标: 根据win10自带功能，将一台PC给另一台PC当扩展屏
