--- a/Personal/2024-07-23-2024年工作笔记.md
+++ b/Personal/2024-07-23-2024年工作笔记.md
@@ -1764,6 +1764,8 @@ last_modified_date: 2024-07-30 10:00:00 +0800
 + 08.25
   + Qt开发指南 阅读
 
+## 2024.08.26 - 2024.09.01
+
 + 08.26
   + 工作 -- 状态机
     + 状态定义
@@ -1786,3 +1788,15 @@ last_modified_date: 2024-07-30 10:00:00 +0800
     + 流程整合 [done]
     + 遥控器数据结构定义 [doing]
     + 遥控器数据处理流程编写
+
++ 08.29
+  + 工作 -- 状态机
+    + 遥控器数据结构定义 [done]
+    + 遥控器数据处理流程编写 [done]
+
++ 08.30
+  + 工作 -- 调试大机器人
+    + 减速比校准
+    + 零位校准
+  + 自我提升
+    + python爬取boss职位信息
