--- a/VSCode/2024-05-22-2_常用技巧.md
+++ b/VSCode/2024-05-22-2_常用技巧.md
@@ -9,6 +9,12 @@ tag: VSCode
 
 + VSCode 编辑器常用的技巧
 
+## vscode windows下PATH环境变量更新，vscode未识别
+
++ 先退出VSCode
++ 打开cmd窗口，输入并执行 code 命令
++ 在新打开的VSCode的终端里，环境变量已经是最新的
+
 ## vscode 页面切换到左侧工具栏
 
 在 Visual Studio Code 中，如果你希望将焦点从编辑器切换到左侧的侧边栏（也称为 Activity Bar），可以使用以下方法：
