--- a/Personal/2024-07-23-2024年工作笔记.md
+++ b/Personal/2024-07-23-2024年工作笔记.md
@@ -1800,3 +1800,22 @@ last_modified_date: 2024-07-30 10:00:00 +0800
     + 零位校准
   + 自我提升
     + python爬取boss职位信息
+
++ 08.31 
+  + 自我提升
+    + python爬取boss职位信息 [done]
+      + 获取boss直聘第一页所有职位的岗位介绍和要求信息
+
++ 09.01
+  + 思考下一步要学习的方向
+    + 设计模式
+    + 软件工程
+    + 机器人软件研发技术栈
+      + 硬件基础是机械臂
+      + 行业知识
+      + Qt开发
+
+## 2024.09.02 - 2024.09.08
+
++ 09.02
+  + 
