--- a/Qt/2024-08-21-qt_2_碰钉机器人软件笔记.md
+++ b/Qt/2024-08-21-qt_2_碰钉机器人软件笔记.md
@@ -9,6 +9,88 @@ tag: Qt-PD-Robot-note
 
 + 碰钉软件机器人软件代码学习笔记
 
+## Qt QAtomicInt类型 详解
+
+`QAtomicInt` 是 Qt 中提供的一种用于原子操作的整数类型。原子操作指的是在多线程环境中执行的操作，它们在 CPU 层级上是不可分割的，确保操作在执行时不会被中断，从而避免线程竞争问题。
+
+### `QAtomicInt` 概述
+
+`QAtomicInt` 是一个提供了基本整型（`int`）的原子操作封装的类。它通常用于实现线程安全的计数器或其他需要原子性递增、递减操作的场景。
+
+### 特性
+
+- **原子性**：所有的操作都在底层以原子方式执行，避免了线程安全问题。
+- **跨平台支持**：Qt 提供的原子操作在不同的平台上具有一致性，可以在 Windows、Linux、macOS 等平台上使用。
+
+### 主要方法
+
+以下是 `QAtomicInt` 常用的方法：
+
+1. **构造函数**
+   - `QAtomicInt()`：默认构造一个原子整数，并将其初始化为 0。
+   - `QAtomicInt(int value)`：使用指定的值初始化原子整数。
+
+2. **读操作**
+   - `int loadAcquire() const`：获取当前值，确保所有读操作在此操作之前完成。
+   - `int loadRelaxed() const`：获取当前值，但不强制同步内存。
+
+3. **写操作**
+   - `void storeRelease(int newValue)`：设置新值，确保所有写操作在此操作之后完成。
+   - `void storeRelaxed(int newValue)`：设置新值，但不强制同步内存。
+
+4. **增减操作**
+   - `bool ref()`：将值递增 1。如果结果是非零值，返回 `true`，否则返回 `false`。
+   - `bool deref()`：将值递减 1。如果结果是非零值，返回 `true`，否则返回 `false`。
+   - `int fetchAndAddAcquire(int value)`：在获取值后再增加指定的值。
+   - `int fetchAndAddRelaxed(int value)`：在不强制同步内存的情况下增加指定的值。
+   - `int fetchAndStoreAcquire(int newValue)`：获取当前值并将其设置为 `newValue`。
+   - `int fetchAndStoreRelaxed(int newValue)`：在不强制同步内存的情况下设置新值。
+
+### 使用场景
+
+- **线程计数器**：在多线程应用中，可以使用 `QAtomicInt` 来实现一个线程安全的计数器。
+- **资源管理**：可以用于引用计数的实现，确保在多线程环境下资源能够正确地分配和释放。
+
+### 示例代码
+
+以下是一个使用 `QAtomicInt` 的简单例子：
+
+```cpp
+#include <QAtomicInt>
+#include <QDebug>
+#include <QThread>
+
+QAtomicInt counter(0);
+
+void workerFunction() {
+    for (int i = 0; i < 1000; ++i) {
+        counter.ref();  // 线程安全地增加计数器
+    }
+}
+
+int main() {
+    QThread t1(workerFunction);
+    QThread t2(workerFunction);
+
+    t1.start();
+    t2.start();
+
+    t1.wait();
+    t2.wait();
+
+    qDebug() << "Final counter value:" << counter.loadAcquire();  // 输出最终计数值
+    return 0;
+}
+```
+
+在这个例子中，我们创建了两个线程，每个线程都递增 `counter` 1000 次。由于使用了 `QAtomicInt`，计数操作是线程安全的，因此最终的计数值是 2000。
+
+### 注意事项
+
+- `QAtomicInt` 适合用于简单的整数原子操作。如果需要更复杂的原子操作，可以考虑使用 `QAtomicInteger<T>` 或 `QMutex`、`QSemaphore` 等同步原语。
+
+`QAtomicInt` 提供了一种简单而高效的方式来处理多线程环境中的整数操作，确保数据的一致性和线程安全性。
+
 ## Qt QTextCodec::setCodecForLocale() 函数 详解
 
 `QTextCodec::setCodecForLocale()` 是 Qt 中用于设置程序的字符编码的函数。具体来说，它设置用于处理当前区域语言（locale）的字符编码。
