--- a/Personal/2024-07-23-2024年工作笔记.md
+++ b/Personal/2024-07-23-2024年工作笔记.md
@@ -1818,4 +1818,7 @@ last_modified_date: 2024-07-30 10:00:00 +0800
 ## 2024.09.02 - 2024.09.08
 
 + 09.02
-  + 
+  + 工作
+    + 增加视觉算法命令转换函数 [done]
+    + 根据参数修改RobotParameter.h  [done]
+    + 遥控器控制编写
